--- a/manager/src/main/res/values-de/strings.xml
+++ b/manager/src/main/res/values-de/strings.xml
@@ -6,7 +6,7 @@
     <string name="home_adb_dialog_view_command_copy_button">Kopieren</string>
     <string name="home_adb_dialog_view_command_message">&lt;font face=monospace&gt;%1$s&lt;/font&gt;&lt;br&gt;&lt;br&gt;* Es gibt noch einige andere Überlegungen, bitte vergewissern, dass Sie zuerst die Hilfe gelesen haben.</string>
     <string name="home_adb_button_view_command">Befehl anzeigen</string>
-    <string name="home_adb_description">Bei Geräten ohne Root müssen Sie adb verwenden, um Shizuku zu starten (erfordert Computerverbindung). Dieser Vorgang muss bei jedem Neustart des Geräts wiederholt werden. Bitte <b><a href="%1$s">die Hilfe lesen</a></b>.</string>
+    <string name="home_adb_description">Bei Geräten ohne Root müssen Sie adb verwenden, um Shizuku™ zu starten (erfordert Computerverbindung). Dieser Vorgang muss bei jedem Neustart des Geräts wiederholt werden. Bitte <b><a href="%1$s">die Hilfe lesen</a></b>.</string>
     <string name="home_adb_button_view_help">Hilfe lesen</string>
     <string name="home_adb_title">Verbindung mit dem Compter herstellen</string>
     <string name="home_status_service_version_update">Version %2$s, %1$s&lt;br&gt;Erneut starten, um auf Version %3$s zu aktualisieren</string>
@@ -16,7 +16,7 @@
     <string name="app_management_dialog_adb_is_limited_title">ADB-Berechtigungen sind begrenzt</string>
     <string name="about_view_source_code">Quelltext auf %s anzeigen</string>
     <string name="action_about">Über</string>
-    <string name="action_stop">Shizuku anhalten</string>
+    <string name="action_stop">Shizuku™ anhalten</string>
     <string name="settings_black_night_theme_summary">Das rein schwarze Thema verwenden, wenn der Nachtmodus aktiviert ist</string>
     <string name="settings_black_night_theme">Schwarzes Thema</string>
     <plurals name="home_app_management_authorized_apps_count">
@@ -25,51 +25,51 @@
     </plurals>
     <string name="dialog_wireless_adb_not_enabled">Kabelloses Debugging ist nicht aktiviert.
 \nHinweis: Vor Android 11 ist für die Aktivierung des kabellosen Debugging eine Computerverbindung erforderlich.</string>
-    <string name="home_root_description">Außerdem kann Shizuku beim Booten automatisch gestartet werden. Wenn nicht, überprüfen Sie bitte, ob Ihr System oder Tools von Drittanbietern Shizuku eingeschränkt haben.&lt;br&gt;Sie können auf %s verweisen.</string>
+    <string name="home_root_description">Außerdem kann Shizuku™ beim Booten automatisch gestartet werden. Wenn nicht, überprüfen Sie bitte, ob Ihr System oder Tools von Drittanbietern Shizuku™ eingeschränkt haben.&lt;br&gt;Sie können auf %s verweisen.</string>
     <string name="development_settings">Entwickleroptionen</string>
     <string name="adb_pairing_requires_multi_window">Bitte zuerst in den Modus \"Geteilter Bildschirm\" (Mehrfenster) gehen.</string>
     <string name="dialog_adb_discovery_message">Bitte \"Wireless Debugging\" in den \"Entwickleroptionen\" aktivieren. \"Wireless Debugging\" wird automatisch deaktiviert, wenn sich das Netzwerk ändert.
 \n
-\nHinweis: \"Entwickleroptionen\" oder \"USB-Debugging\" nicht deaktivieren, sonst wird Shizuku gestoppt.</string>
+\nHinweis: \"Entwickleroptionen\" oder \"USB-Debugging\" nicht deaktivieren, sonst wird Shizuku™ gestoppt.</string>
     <string name="grant_dialog_button_deny">Verweigern</string>
     <string name="grant_dialog_button_allow_always">Immer zulassen</string>
     <string name="permission_warning_template"><b>%1$s</b> erlauben %2$s zu verwenden\?</string>
     <string name="translation_contributors">" "</string>
-    <string name="notification_service_start_failed">Shizuku-Dienst starten fehlgeschlagen.</string>
+    <string name="notification_service_start_failed">Shizuku™-Dienst starten fehlgeschlagen.</string>
     <string name="notification_channel_service_status">Status des Dienststarts</string>
     <string name="app_management_dialog_adb_is_limited_message">Es ist sehr wahrscheinlich, dass Ihr Gerätehersteller die Berechtigung von adb einschränkt. &lt;p&gt;Vielleicht finden Sie in &lt;b&gt;&lt;a href=\"%1$s\"&gt;diesem Dokument&lt;/a&gt;&lt;/b&gt; eine Lösung für Ihr System.</string>
-    <string name="home_root_description_sui">Wenn Sie Magisk verwenden, können Sie %1$s ausprobieren. Für Root-Nutzer wird es irgendwann Shizuku ersetzen. Beachten Sie, dass bestehende Apps ein wenig geändert werden müssen, um %2$s zu verwenden.</string>
+    <string name="home_root_description_sui">Wenn Sie Magisk verwenden, können Sie %1$s ausprobieren. Für Root-Nutzer wird es irgendwann Shizuku™ ersetzen. Beachten Sie, dass bestehende Apps ein wenig geändert werden müssen, um %2$s zu verwenden.</string>
     <string name="adb_pairing">Kopplung</string>
     <string name="dialog_adb_port">Port</string>
-    <string name="dialog_requesting_legacy_button_open_shizuku">Shizuku öffnen</string>
-    <string name="dialog_requesting_legacy_title">%1$s bittet um Legacy Shizuku</string>
-    <string name="dialog_legacy_not_support_message">Legacy Shizuku ist seit März 2019 veraltet. Außerdem funktioniert Legacy Shizuku nicht auf neueren Android-Systemen.&lt;p&gt;Bitte bitten Sie den Entwickler von &lt;b&gt;%1$s&lt;/b&gt; es zu aktualisieren.</string>
-    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; hat moderne Shizuku-Unterstützung, aber es fordert Legacy Shizuku an. Dies könnte daran liegen, dass Shizuku nicht läuft. Bitte in der Shizuku-App überprüfen.&lt;p&gt;Legacy Shizuku wird seit März 2019 nicht mehr unterstützt.</string>
-    <string name="dialog_legacy_not_support_title">%1$s unterstützt das moderne Shizuku nicht</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">Shizuku™ öffnen</string>
+    <string name="dialog_requesting_legacy_title">%1$s bittet um Legacy Shizuku™</string>
+    <string name="dialog_legacy_not_support_message">Legacy Shizuku™ ist seit März 2019 veraltet. Außerdem funktioniert Legacy Shizuku™ nicht auf neueren Android-Systemen.&lt;p&gt;Bitte bitten Sie den Entwickler von &lt;b&gt;%1$s&lt;/b&gt; es zu aktualisieren.</string>
+    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; hat moderne Shizuku™-Unterstützung, aber es fordert Legacy Shizuku™ an. Dies könnte daran liegen, dass Shizuku™ nicht läuft. Bitte in der Shizuku™-App überprüfen.&lt;p&gt;Legacy Shizuku™ wird seit März 2019 nicht mehr unterstützt.</string>
+    <string name="dialog_legacy_not_support_title">%1$s unterstützt das moderne Shizuku™ nicht</string>
     <string name="toast_copied_to_clipboard_with_text"><b>%s</b> wurde in Zwischenablage kopiert.</string>
     <string name="toast_copied_to_clipboard">%s
 \nwurde in Zwischenablage kopiert.</string>
     <string name="dialog_cannot_open_browser_title">Browser starten nicht möglich</string>
     <string name="start_with_root_failed">Dienst starten nicht möglich, da keine Root-Rechte erteilt wurden oder das Gerät nicht gerootet ist.</string>
     <string name="starter">Starter</string>
-    <string name="permission_description">Der App erlauben, Shizuku zu verwenden.</string>
-    <string name="permission_label">Shizuku-Zugriff</string>
+    <string name="permission_description">Der App erlauben, Shizuku™ zu verwenden.</string>
+    <string name="permission_label">Shizuku™-Zugriff</string>
     <string name="notification_working">Läuft…</string>
     <string name="notification_service_start_no_root">Root-Rechte anfordern fehlgeschlagen.</string>
-    <string name="notification_service_starting">Shizuku-Dienst startetet…</string>
-    <string name="dialog_stop_message">Shizuku-Dienst wird angehalten.</string>
+    <string name="notification_service_starting">Shizuku™-Dienst startetet…</string>
+    <string name="dialog_stop_message">Shizuku™-Dienst wird angehalten.</string>
     <string name="settings_translation">An der Übersetzung mitarbeiten</string>
     <string name="settings_translation_contributors">Zur Übersetzung beigetragen</string>
     <string name="settings_translation_summary">Uns helfen, %s in Ihre Sprache zu übersetzen</string>
-    <string name="settings_start_on_boot_summary">Bei gerooteten Geräten kann Shizuku beim Booten automatisch starten</string>
+    <string name="settings_start_on_boot_summary">Bei gerooteten Geräten kann Shizuku™ beim Booten automatisch starten</string>
     <string name="settings_start_on_boot">Beim Hochfahren starten (Root)</string>
     <string name="settings_startup">Beim Starten</string>
     <string name="settings_user_interface">Aussehen</string>
     <string name="settings_language">Sprache</string>
     <string name="settings_title">Einstellungen</string>
-    <string name="app_management_item_summary_requires_root">* erfordert, dass Shizuku mit Root läuft</string>
-    <string name="home_learn_more_description">Lernen Sie, wie Apps mit Shizuku entwickelt werden</string>
-    <string name="home_learn_more_title">Shizuku kennenlernen</string>
+    <string name="app_management_item_summary_requires_root">* erfordert, dass Shizuku™ mit Root läuft</string>
+    <string name="home_learn_more_description">Lernen Sie, wie Apps mit Shizuku™ entwickelt werden</string>
+    <string name="home_learn_more_title">Shizuku™ kennenlernen</string>
     <string name="home_app_management_view_authorized_apps">Tippen, um autorisierte Apps zu verwalten</string>
     <string name="home_app_management_title">App-Verwaltung</string>
     <string name="home_root_button_restart">Neustart</string>
@@ -88,50 +88,50 @@
     <string name="dialog_adb_pairing_discovery">Nach Kopplungsdienst suchen</string>
     <string name="dialog_adb_pairing_title">Mit Gerät koppeln</string>
     <string name="dialog_adb_invalid_port">Port ist eine ganze Zahl zwischen 0 und 65536.</string>
-    <string name="terminal_tutorial_3">Zum Schluss verschieben Sie die Dateien an einen Ort, auf den Ihre Terminal-App zugreifen kann, damit Sie mit %1$s Befehle über Shizuku ausführen können.</string>
-    <string name="terminal_tutorial_2_description">Wenn Sie beispielsweise Shizuku in %1$s verwenden möchten, sollten Sie %2$s durch %3$s ersetzen (%4$s ist der Paketname von %1$s).</string>
+    <string name="terminal_tutorial_3">Zum Schluss verschieben Sie die Dateien an einen Ort, auf den Ihre Terminal-App zugreifen kann, damit Sie mit %1$s Befehle über Shizuku™ ausführen können.</string>
+    <string name="terminal_tutorial_2_description">Wenn Sie beispielsweise Shizuku™ in %1$s verwenden möchten, sollten Sie %2$s durch %3$s ersetzen (%4$s ist der Paketname von %1$s).</string>
     <string name="terminal_tutorial_2">Dann einen beliebigen Texteditor verwenden, um %1$s zu öffnen und zu bearbeiten.</string>
     <string name="terminal_export_files">Dateien exportieren</string>
     <string name="terminal_tutorial_1_description">Wenn es im ausgewählten Ordner Dateien mit demselben Namen gibt, werden diese gelöscht.
 \n
-\nDie Exportfunktion verwendet SAF (Storage Access Framework). Es wird berichtet, dass MIUI die Funktionen von SAF unterbricht. Wenn Sie MIUI verwenden, müssen Sie möglicherweise die Datei aus der apk von Shizuku extrahieren oder von GitHub herunterladen.</string>
+\nDie Exportfunktion verwendet SAF (Storage Access Framework). Es wird berichtet, dass MIUI die Funktionen von SAF unterbricht. Wenn Sie MIUI verwenden, müssen Sie möglicherweise die Datei aus der apk von Shizuku™ extrahieren oder von GitHub herunterladen.</string>
     <string name="terminal_tutorial_1">Zuerst Dateien an einen beliebigen Ort exportieren. Sie werden zwei Dateien finden, %1$s und %2$s.</string>
-    <string name="home_terminal_description">Befehle über Shizuku in Terminal-Apps ausführen, die Sie mögen</string>
-    <string name="home_terminal_title">Shizuku in Terminal-Apps verwenden</string>
+    <string name="home_terminal_description">Befehle über Shizuku™ in Terminal-Apps ausführen, die Sie mögen</string>
+    <string name="home_terminal_title">Shizuku™ in Terminal-Apps verwenden</string>
     <string name="terminal_tutorial_3_description">Einige Tipps: %1$s die Ausführungsberechtigung erteilen und zu %2$s hinzufügen, dann können Sie %1$s direkt verwenden.</string>
-    <string name="home_wireless_adb_description">Unter Android 11 oder höher können Sie Wireless Debugging aktivieren und Shizuku direkt von Ihrem Gerät aus starten, ohne eine Verbindung zu einem Computer herzustellen.&lt;p&gt;Bitte zuerst die Schritt-für-Schritt-Anleitung ansehen.</string>
+    <string name="home_wireless_adb_description">Unter Android 11 oder höher können Sie Wireless Debugging aktivieren und Shizuku™ direkt von Ihrem Gerät aus starten, ohne eine Verbindung zu einem Computer herzustellen.&lt;p&gt;Bitte zuerst die Schritt-für-Schritt-Anleitung ansehen.</string>
     <string name="notification_adb_pairing_service_found_title">Kopplungsdienst gefunden</string>
-    <string name="adb_pairing_tutorial_title">Shizuku mit Ihrem Gerät koppeln</string>
+    <string name="adb_pairing_tutorial_title">Shizuku™ mit Ihrem Gerät koppeln</string>
     <string name="adb_pairing_tutorial_content_steps">\"Entwickleroptionen\" - \"Kabelloses Debugging\" wählen. Auf \"Gerät mit Pairing-Code koppeln\", ein sechsstelligen Code ist zusehen.</string>
     <string name="adb_pairing_tutorial_content_enter_pairing_code">Code aus der Benachrichtigung eingeben, um die Kopplung abzuschließen.</string>
     <string name="adb_pairing_tutorial_content_miui_2">Andernfalls können Sie den Kopplungscode möglicherweise nicht über die Meldung eingeben.</string>
     <string name="notification_adb_pairing_stop_searching">Suche beenden</string>
     <string name="notification_adb_pairing_searching_for_service_title">Nach Kopplungsdienst suchen</string>
     <string name="notification_adb_pairing_succeed_title">Erfolgreich gekoppelt</string>
-    <string name="notification_adb_pairing_succeed_text">Sie können den Shizuku-Dienst jetzt starten.</string>
+    <string name="notification_adb_pairing_succeed_text">Sie können den Shizuku™-Dienst jetzt starten.</string>
     <string name="notification_adb_pairing_failed_title">Koppeln fehlgeschlagen</string>
     <string name="notification_adb_pairing_retry">Wiederholen</string>
     <string name="notification_channel_adb_pairing">Kabellose Debugging-Kopplung</string>
     <string name="notification_adb_pairing_input_paring_code">Kopplungscode eingeben</string>
     <string name="notification_adb_pairing_working_title">Koppeln läuft</string>
-    <string name="adb_pairing_tutorial_content_notification">Eine Benachrichtigung von Shizuku wird Ihnen helfen, die Kopplung abzuschließen.</string>
+    <string name="adb_pairing_tutorial_content_notification">Eine Benachrichtigung von Shizuku™ wird Ihnen helfen, die Kopplung abzuschließen.</string>
     <string name="home_wireless_adb_description_pre_11">Vor Android 11 ist eine Verbindung zu einem Computer erforderlich, um Wireless Debugging zu aktivieren.</string>
     <string name="home_wireless_adb_view_guide_button">Schritt-für-Schritt-Anleitung</string>
     <string name="adb_pairing_tutorial_content_miui">MIUI-Nutzer müssen in den Systemeinstellungen unter \"Benachrichtigung\" - \"Benachrichtigungsleiste\" möglicherweise den Benachrichtigungsstil auf \"Android\" umstellen.</string>
-    <string name="adb_pairing_tutorial_content_finish">Zurück zu Shizuku und Shizuku starten.</string>
-    <string name="rish_description">Mit %1$s können Sie in jeder Terminal-App eine Verbindung zur Shell von Shizuku herstellen und mit ihr interagieren. &lt;p&gt;Zur detaillierten Verwendung von %1$s tippen, um das Dokument anzuzeigen.</string>
-    <string name="adb_pairing_tutorial_content_notification_blocked">Für den Kopplungssprozess müssen Sie mit einer Benachrichtigung von Shizuku interagieren. Bitte Shizuku erlauben, Benachrichtigungen zu posten.</string>
+    <string name="adb_pairing_tutorial_content_finish">Zurück zu Shizuku™ und Shizuku™ starten.</string>
+    <string name="rish_description">Mit %1$s können Sie in jeder Terminal-App eine Verbindung zur Shell von Shizuku™ herstellen und mit ihr interagieren. &lt;p&gt;Zur detaillierten Verwendung von %1$s tippen, um das Dokument anzuzeigen.</string>
+    <string name="adb_pairing_tutorial_content_notification_blocked">Für den Kopplungssprozess müssen Sie mit einer Benachrichtigung von Shizuku™ interagieren. Bitte Shizuku™ erlauben, Benachrichtigungen zu posten.</string>
     <string name="notification_settings">Benachrichtigungsoptionen</string>
-    <string name="adb_pairing_tutorial_content_network">Shizuku muss auf das lokale Netzwerk zugreifen. Dies wird durch die Netzwerkberechtigung gesteuert.</string>
-    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Einige Systeme (z. B. MIUI) verbieten Apps den Netzwerkzugriff, wenn sie nicht sichtbar sind, selbst wenn die App standardmäßig einen Vordergrunddienst verwendet. Bitte auf solchen Systemen die Akku-Optimierungsfunktionen für Shizuku deaktivieren.</string>
+    <string name="adb_pairing_tutorial_content_network">Shizuku™ muss auf das lokale Netzwerk zugreifen. Dies wird durch die Netzwerkberechtigung gesteuert.</string>
+    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Einige Systeme (z. B. MIUI) verbieten Apps den Netzwerkzugriff, wenn sie nicht sichtbar sind, selbst wenn die App standardmäßig einen Vordergrunddienst verwendet. Bitte auf solchen Systemen die Akku-Optimierungsfunktionen für Shizuku™ deaktivieren.</string>
     <string name="settings_use_system_color">Verwende Farbe des Systemdesigns</string>
-    <string name="home_adb_is_limited_description">Ihr Gerätehersteller hat ADB-Berechtigungen eingeschränkt. Dadurch werden Apps, die Shizuku verwenden, nicht ordnungsgemäß funktionieren.
+    <string name="home_adb_is_limited_description">Ihr Gerätehersteller hat ADB-Berechtigungen eingeschränkt. Dadurch werden Apps, die Shizuku™ verwenden, nicht ordnungsgemäß funktionieren.
 \n
 \nMeist kann diese Einschränkung aufgehoben werden, wenn bestimmte Einstellungen in den \"Entwicklereinstellungen\" angepasst werden. Bitte lesen Sie die Hilfeseite, um mehr darüber zu erfahren.
 \n
-\nEventuell müssen Sie Shizuku neustarten, damit die Änderungen angewandt werden.</string>
+\nEventuell müssen Sie Shizuku™ neustarten, damit die Änderungen angewandt werden.</string>
     <string name="home_adb_is_limited_title">Sie müssen einen zusätzlichen Schritt durchführen</string>
-    <string name="home_app_management_empty">Apps, die Shizuku angefordert oder deklariert haben, werden hier angezeigt.</string>
+    <string name="home_app_management_empty">Apps, die Shizuku™ angefordert oder deklariert haben, werden hier angezeigt.</string>
     <string name="adb_pairing_tutorial_content_left_is_clickable">Bitte beachte, dass der linke Teil der \"Wireless debugging\"-Option anklickbar ist; wird es angetippt öffnet es eine neue Seite. Lediglich den Schalter auf der rechten Seite umzulegen ist falsch.</string>
     <string name="dialog_adb_discovery_message_toggle_wireless_debugging">Bitte versuche \"Wireless debugging\" aus- und einzuschalten, falls es weiterhin sucht.</string>
 </resources>
