--- a/manager/src/main/res/values-el/strings.xml
+++ b/manager/src/main/res/values-el/strings.xml
@@ -12,7 +12,7 @@
     <string name="home_wireless_adb_description_pre_11">Πριν από το Android 11, είναι απαραίτητη η σύνδεση με έναν υπολογιστή για την ενεργοποίηση του ασύρματου εντοπισμού σφαλμάτων.</string>
     <string name="home_adb_button_view_command">Προβολή εντολής</string>
     <string name="home_adb_button_view_help">Ανάγνωση βοήθειας</string>
-    <string name="home_adb_description">Για συσκευές χωρίς πρόσβαση root, πρέπει να χρησιμοποιήσετε το adb για την εκκίνηση του Shizuku (απαιτεί σύνδεση σε υπολογιστή). Αυτή η διαδικασία θα πρέπει να επαναλαμβάνεται κάθε φορά που επανεκκινείται η συσκευή. <b><a href="%1$s">Διαβάστε τη βοήθεια</a></b>.</string>
+    <string name="home_adb_description">Για συσκευές χωρίς πρόσβαση root, πρέπει να χρησιμοποιήσετε το adb για την εκκίνηση του Shizuku™ (απαιτεί σύνδεση σε υπολογιστή). Αυτή η διαδικασία θα πρέπει να επαναλαμβάνεται κάθε φορά που επανεκκινείται η συσκευή. <b><a href="%1$s">Διαβάστε τη βοήθεια</a></b>.</string>
     <string name="home_adb_title">Έναρξη μέσω σύνδεσης με υπολογιστή</string>
     <string name="home_status_service_version_update">Έκδοση %2$s, %1$s&lt;br&gt;Κάντε ξανά εκκίνηση για ενημέρωση στην έκδοση %3$s</string>
     <string name="home_status_service_not_running">Το %1$s δεν εκτελείται</string>
