--- a/manager/src/main/res/values-he/strings.xml
+++ b/manager/src/main/res/values-he/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="home_adb_button_view_command">הצג פקודה</string>
     <string name="home_adb_button_view_help">קראו את דפי העזרה</string>
-    <string name="home_adb_description">עבור מכשירים ללא גישת שורש, עליך להשתמש ב-adb כדי להתחיל את Shizuku (נדרש חיבור למחשב). \u0020עליך לחזור על תהליך זה בכל פעם שמכשירך יופעל מחדש. בבקשה <b> <a href="%1$s">קראו את דפי העזרה</a></b>.</string>
+    <string name="home_adb_description">עבור מכשירים ללא גישת שורש, עליך להשתמש ב-adb כדי להתחיל את Shizuku™ (נדרש חיבור למחשב). \u0020עליך לחזור על תהליך זה בכל פעם שמכשירך יופעל מחדש. בבקשה <b> <a href="%1$s">קראו את דפי העזרה</a></b>.</string>
     <string name="home_adb_title">התחל באמצעות חיבור למחשב</string>
     <string name="home_status_service_version_update">גירסה %2$s, %1$s&lt;br&gt;התחל מחדש כדי לעדכן לגירסה %3$s</string>
     <string name="home_status_service_version">גירסה %2$s, %1$s</string>
@@ -11,6 +11,6 @@
     <string name="home_adb_dialog_view_command_message">&lt;font face=monospace&gt;%1$s&lt;/font&gt;&lt;br&gt;&lt;br&gt;* יש עדין שיקולים אחרים, בבקשה תאשר שקראת את העזרה לפני.</string>
     <string name="home_adb_dialog_view_command_button_send">שלח</string>
     <string name="home_adb_dialog_view_command_copy_button">העתק</string>
-    <string name="home_wireless_adb_description">באנדרואיד 11 ומעלה, אתם יכולים להפעיל ניפוי באגים אלחוטי ולהתחיל את Shizuku ישירות מהמכשיר שלכם, ללא חיבור למחשב. קודם כל, הביטו בבקשה במדריך.</string>
+    <string name="home_wireless_adb_description">באנדרואיד 11 ומעלה, אתם יכולים להפעיל ניפוי באגים אלחוטי ולהתחיל את Shizuku™ ישירות מהמכשיר שלכם, ללא חיבור למחשב. קודם כל, הביטו בבקשה במדריך.</string>
     <string name="home_wireless_adb_title">התחל עם ניפוי באגים אלחוטי</string>
 </resources>
