--- a/manager/src/main/res/values-id/strings.xml
+++ b/manager/src/main/res/values-id/strings.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="home_status_service_version_update">Versi %2$s, %1$s &lt;br&gt; Mulai ulang untuk upgrade ke versi %3$s</string>
-    <string name="home_adb_description">Untuk perangkat tanpa akses root, Anda harus menggunakan adb untuk memulai Shizuku (perlu terhubung dengan komputer). Proses ini harus diulang setiap kali perangkat di-restart. Harap <b><a href="%1$s">baca dokumentasi</a></b> untuk info lebih lanjut.</string>
+    <string name="home_adb_description">Untuk perangkat tanpa akses root, Anda harus menggunakan adb untuk memulai Shizuku™ (perlu terhubung dengan komputer). Proses ini harus diulang setiap kali perangkat di-restart. Harap <b><a href="%1$s">baca dokumentasi</a></b> untuk info lebih lanjut.</string>
     <string name="dialog_adb_discovery_message">Harap aktifkan \"Debug Nirkabel (Wireless Debugging)\" pada \"Pilihan Pengembang (Developer Option)\". Opsi \"Debug Nirkabel\" akan nonaktif otomatis saat koneksi berubah.
 \n
-\nSebagai catatan, jangan nonaktifkan \"Pilihan Pengembang\" atau \"Debug USB\", karena Shizuku akan terhenti.</string>
+\nSebagai catatan, jangan nonaktifkan \"Pilihan Pengembang\" atau \"Debug USB\", karena Shizuku™ akan terhenti.</string>
     <string name="dialog_adb_pairing_message">Harap mulai penyambungan melalui langkah berikut: \"Pilihan Pengembang\" – \"Debug Nirkabel\" – \"Sambungkan perangkat dengan kode penghubung\".
 \n
 \nSetelah penyambungan dimulai, Anda akan diminta untuk memasukkan kode penghubung.</string>
-    <string name="adb_pairing_requires_multi_window_reason">Sistem mengharuskan dialog penyambungan untuk selalu terlihat, hal ini hanya bisa diakali dengan mode layar pisah (split-screen) untuk membuat Shizuku dan dialog sistem muncul secara bersamaan.</string>
-    <string name="home_root_description">Sebagai tambahan, Shizuku bisa dimulai secara otomatis saat perangkat dimulai. Kalau hal ini tak bisa dilakukan, harap cek apakah sistem Anda atau aplikasi pihak-ketiga telah membatasi Shizuku.&lt;br&gt;Lebih lanjut, cek %s.</string>
-    <string name="home_learn_more_description">Pelajari cara mengembangkan dengan Shizuku</string>
+    <string name="adb_pairing_requires_multi_window_reason">Sistem mengharuskan dialog penyambungan untuk selalu terlihat, hal ini hanya bisa diakali dengan mode layar pisah (split-screen) untuk membuat Shizuku™ dan dialog sistem muncul secara bersamaan.</string>
+    <string name="home_root_description">Sebagai tambahan, Shizuku™ bisa dimulai secara otomatis saat perangkat dimulai. Kalau hal ini tak bisa dilakukan, harap cek apakah sistem Anda atau aplikasi pihak-ketiga telah membatasi Shizuku™.&lt;br&gt;Lebih lanjut, cek %s.</string>
+    <string name="home_learn_more_description">Pelajari cara mengembangkan dengan Shizuku™</string>
     <string name="terminal_tutorial_1">Pertama, Ekspor file ke tempat mana pun yang Anda mau. Anda akan mendapatkan dua file, yaitu %1$s dan %2$s.</string>
     <string name="terminal_tutorial_1_description">Jika ada file bernama sama pada folder tersebut, maka file tersebut akan ditimpa.
 \n
-\nFungsi ekspor ini menggunakan SAF (Storage Access Framework). Beberapa orang melaporkan bahwa MIUI mengacaukan fungsi SAF. Jadi jika Anda memakai MIUI, mungkin Anda harus mengekstrak file ini dari apk Shizuku atau mengunduhnya dari GitHub.</string>
-    <string name="terminal_tutorial_2_description">Sebagai contoh, jika Anda mau menggunakan Shizuku di %1$s, Anda harus menimpa %2$s dengan %3$s (%4$s adalah nama paket dari %1$s).</string>
+\nFungsi ekspor ini menggunakan SAF (Storage Access Framework). Beberapa orang melaporkan bahwa MIUI mengacaukan fungsi SAF. Jadi jika Anda memakai MIUI, mungkin Anda harus mengekstrak file ini dari apk Shizuku™ atau mengunduhnya dari GitHub.</string>
+    <string name="terminal_tutorial_2_description">Sebagai contoh, jika Anda mau menggunakan Shizuku™ di %1$s, Anda harus menimpa %2$s dengan %3$s (%4$s adalah nama paket dari %1$s).</string>
     <string name="terminal_tutorial_3_description">Tips tambahan: berikan izin eksekusi pada %1$s dan tambahkan pada %2$s, Anda akan bisa menggunakan %1$s secara langsung.</string>
-    <string name="action_stop">Hentikan Shizuku</string>
+    <string name="action_stop">Hentikan Shizuku™</string>
     <string name="notification_service_start_no_root">Gagal mendapat izin root.</string>
     <string name="start_with_root_failed">Layanan tidak bisa dimulai karena aplikasi tidak mendapat izin root atau perangkat tidak memiliki akses root.</string>
     <string name="translation_contributors">laymoth</string>
@@ -48,7 +48,7 @@
     <string name="adb_pair_required">Harap lakukan penyambungan terlebih dahulu.</string>
     <string name="development_settings">Pilihan pengembang</string>
     <string name="home_root_title">Mulai (untuk perangkat dengan root)</string>
-    <string name="home_root_description_sui">Jika Anda menggunakan Magisk, Anda bisa coba %1$s. Untuk pengguna root, hal ini perlahan akan menggantikan Shizuku. Sebagai catatan, aplikasi yang sudah ada harus disesuaikan sedikit untuk menggunakan %2$s.</string>
+    <string name="home_root_description_sui">Jika Anda menggunakan Magisk, Anda bisa coba %1$s. Untuk pengguna root, hal ini perlahan akan menggantikan Shizuku™. Sebagai catatan, aplikasi yang sudah ada harus disesuaikan sedikit untuk menggunakan %2$s.</string>
     <string name="home_root_button_start">Mulai</string>
     <string name="home_root_button_restart">Mulai ulang</string>
     <string name="home_app_management_title">Manajemen Aplikasi</string>
@@ -56,15 +56,15 @@
         <item quantity="other">%d aplikasi terdaftar</item>
     </plurals>
     <string name="home_app_management_view_authorized_apps">Ketuk untuk mengatur aplikasi terdaftar</string>
-    <string name="home_learn_more_title">Pelajari Shizuku</string>
+    <string name="home_learn_more_title">Pelajari Shizuku™</string>
     <string name="app_management_dialog_adb_is_limited_title">Izin adb terbatas</string>
     <string name="app_management_dialog_adb_is_limited_message">Kemungkinan besar merk perangkat Anda membatasi perizinan adb.&lt;p&gt;Solusi untuk perangkat Anda mungkin ada pada &lt;b&gt;&lt;a href=\"%1$s\"&gt;dokumentasi ini&lt;/a&gt;&lt;/b&gt;.</string>
-    <string name="app_management_item_summary_requires_root">* Shizuku harus dijalankan dengan root</string>
-    <string name="home_terminal_title">Gunakan Shizuku pada aplikasi terminal</string>
-    <string name="home_terminal_description">Jalankan perintah melalui Shizuku pada aplikasi terminal yang Anda gunakan</string>
+    <string name="app_management_item_summary_requires_root">* Shizuku™ harus dijalankan dengan root</string>
+    <string name="home_terminal_title">Gunakan Shizuku™ pada aplikasi terminal</string>
+    <string name="home_terminal_description">Jalankan perintah melalui Shizuku™ pada aplikasi terminal yang Anda gunakan</string>
     <string name="terminal_export_files">Ekspor file</string>
     <string name="terminal_tutorial_2">Lalu, gunakan penyunting teks apa pun untuk membuka dan mengubah %1$s.</string>
-    <string name="terminal_tutorial_3">Terakhir, pindahkan file ke tempat yang bisa diakses oleh aplikasi terminal yang Anda gunakan, Anda akan bisa menggunakan %1$s untuk menjalan perintah melalui Shizuku.</string>
+    <string name="terminal_tutorial_3">Terakhir, pindahkan file ke tempat yang bisa diakses oleh aplikasi terminal yang Anda gunakan, Anda akan bisa menggunakan %1$s untuk menjalan perintah melalui Shizuku™.</string>
     <string name="settings_title">Pengaturan</string>
     <string name="settings_language">Bahasa</string>
     <string name="settings_user_interface">Penampilan</string>
@@ -75,16 +75,16 @@
     <string name="settings_translation">Ikut menerjemahkan</string>
     <string name="settings_translation_summary">Bantu kami menerjemahkan %s dengan bahasa Anda</string>
     <string name="settings_start_on_boot">Mulai saat boot (root)</string>
-    <string name="settings_start_on_boot_summary">Untuk perangkat root, Shizuku bisa mulai otomatis saat boot</string>
+    <string name="settings_start_on_boot_summary">Untuk perangkat root, Shizuku™ bisa mulai otomatis saat boot</string>
     <string name="action_about">Tentang</string>
     <string name="about_view_source_code">Lihat kode sumbernya di %s</string>
-    <string name="dialog_stop_message">Layanan Shizuku akan berhenti.</string>
+    <string name="dialog_stop_message">Layanan Shizuku™ akan berhenti.</string>
     <string name="notification_channel_service_status">Status layanan</string>
-    <string name="notification_service_starting">Memulai layanan Shizuku…</string>
-    <string name="notification_service_start_failed">Layanan Shizuku gagal dimulai.</string>
+    <string name="notification_service_starting">Memulai layanan Shizuku™…</string>
+    <string name="notification_service_start_failed">Layanan Shizuku™ gagal dimulai.</string>
     <string name="notification_working">Sedang bekerja…</string>
-    <string name="permission_description">Izinkan aplikasi menggunakan Shizuku.</string>
-    <string name="permission_label">mengakses Shizuku</string>
+    <string name="permission_description">Izinkan aplikasi menggunakan Shizuku™.</string>
+    <string name="permission_label">mengakses Shizuku™</string>
     <string name="permission_warning_template">Izinkan <b>%1$s</b> untuk %2$s\?</string>
     <string name="grant_dialog_button_allow_always">Selalu izinkan</string>
     <string name="grant_dialog_button_deny">Tolak</string>
@@ -93,16 +93,16 @@
     <string name="toast_copied_to_clipboard">%s
 \ntelah disalin ke papan klip.</string>
     <string name="toast_copied_to_clipboard_with_text"><b>%s</b> telah disalin ke papan klip.</string>
-    <string name="dialog_legacy_not_support_title">%1$s tidak mendukung Shizuku modern</string>
-    <string name="dialog_legacy_not_support_message">Shizuku Kuno sudah dihentikan sejak Maret 2019. Selain itu, Shizuku kuno tidak bisa bekerja pada sistem Android yang lebih baru.&lt;p&gt;Coba minta kepada pengembang dari &lt;b&gt;%1$s&lt;/b&gt; untuk memperbarui aplikasinya.</string>
-    <string name="dialog_requesting_legacy_title">%1$s meminta akses Shizuku kuno</string>
-    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; memiliki dukungan Shizuku modern, namun meminta akses Shizuku kuno. Hal ini bisa terjadi karena Shizuku tidak aktif, harap periksa di aplikasi Shizuku. &lt;p&gt;Shizuku Kuno sudah dihentikan sejak Maret 2019.</string>
-    <string name="dialog_requesting_legacy_button_open_shizuku">Buka Shizuku</string>
-    <string name="rish_description">Dengan %1$s, di aplikasi terminal mana pun, Anda dapat terhubung dan berinteraksi dengan shell yang dijalankan oleh Shizuku. &lt;p&gt;Tentang detail penggunaan %1$s, ketuk untuk melihat dokumen.</string>
+    <string name="dialog_legacy_not_support_title">%1$s tidak mendukung Shizuku™ modern</string>
+    <string name="dialog_legacy_not_support_message">Shizuku™ Kuno sudah dihentikan sejak Maret 2019. Selain itu, Shizuku™ kuno tidak bisa bekerja pada sistem Android yang lebih baru.&lt;p&gt;Coba minta kepada pengembang dari &lt;b&gt;%1$s&lt;/b&gt; untuk memperbarui aplikasinya.</string>
+    <string name="dialog_requesting_legacy_title">%1$s meminta akses Shizuku™ kuno</string>
+    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; memiliki dukungan Shizuku™ modern, namun meminta akses Shizuku™ kuno. Hal ini bisa terjadi karena Shizuku™ tidak aktif, harap periksa di aplikasi Shizuku™. &lt;p&gt;Shizuku™ Kuno sudah dihentikan sejak Maret 2019.</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">Buka Shizuku™</string>
+    <string name="rish_description">Dengan %1$s, di aplikasi terminal mana pun, Anda dapat terhubung dan berinteraksi dengan shell yang dijalankan oleh Shizuku™. &lt;p&gt;Tentang detail penggunaan %1$s, ketuk untuk melihat dokumen.</string>
     <string name="home_wireless_adb_description_pre_11">Sebelum Android 11, koneksi ke komputer diperlukan untuk mengaktifkan debug Nirkabel.</string>
     <string name="adb_pairing_tutorial_content_miui">Pengguna MIUI mungkin perlu mengubah gaya pemberitahuan ke \"Android\" dari \"Pemberitahuan\" - \"Bayangan pemberitahuan\" di pengaturan sistem.</string>
-    <string name="home_wireless_adb_description">Pada Android 11 atau yang lebih baru, Anda dapat mengaktifkan debug Nirkabel dan memulai Shizuku langsung dari perangkat Anda, tanpa menyambungkan ke komputer.&lt;p&gt;Silakan lihat panduan langkah demi langkah terlebih dahulu.</string>
-    <string name="adb_pairing_tutorial_content_notification">Notifikasi dari Shizuku akan membantu Anda untuk menyelesaikan pemasangan.</string>
+    <string name="home_wireless_adb_description">Pada Android 11 atau yang lebih baru, Anda dapat mengaktifkan debug Nirkabel dan memulai Shizuku™ langsung dari perangkat Anda, tanpa menyambungkan ke komputer.&lt;p&gt;Silakan lihat panduan langkah demi langkah terlebih dahulu.</string>
+    <string name="adb_pairing_tutorial_content_notification">Notifikasi dari Shizuku™ akan membantu Anda untuk menyelesaikan pemasangan.</string>
     <string name="adb_pairing_tutorial_content_steps">Masuk \"Opsi developer\" - \"Debug nirkabel\". Sentuh \"Sambungkan perangkat dengan kode penghubung\", Anda akan melihat enam digit kode.</string>
     <string name="adb_pairing_tutorial_content_enter_pairing_code">Masukkan kode pada notifikasi untuk menyelesaikan penyambungan.</string>
     <string name="notification_channel_adb_pairing">Pemasangan debug nirkabel</string>
@@ -110,27 +110,27 @@
     <string name="notification_adb_pairing_searching_for_service_title">Mencari layanan penyambungan</string>
     <string name="notification_adb_pairing_service_found_title">Layanan penyambungan ditemukan</string>
     <string name="notification_adb_pairing_stop_searching">Berhenti mencari</string>
-    <string name="notification_adb_pairing_succeed_text">Anda dapat memulai layanan Shizuku sekarang.</string>
+    <string name="notification_adb_pairing_succeed_text">Anda dapat memulai layanan Shizuku™ sekarang.</string>
     <string name="notification_adb_pairing_failed_title">Penyambungan gagal</string>
     <string name="notification_adb_pairing_retry">Ulangi</string>
-    <string name="adb_pairing_tutorial_title">Pasangkan Shizuku dengan perangkat Anda</string>
+    <string name="adb_pairing_tutorial_title">Pasangkan Shizuku™ dengan perangkat Anda</string>
     <string name="notification_adb_pairing_working_title">Penyambungan dalam proses</string>
     <string name="notification_adb_pairing_succeed_title">Penyambungan berhasil</string>
     <string name="notification_settings">Pengaturan notifikasi</string>
-    <string name="adb_pairing_tutorial_content_notification_blocked">Proses penyambungan membutuhkan Anda untuk berinteraksi dengan notifikasi dari Shizuku. Mohon izinkan Shizuku untuk mengirim pemberitahuan.</string>
+    <string name="adb_pairing_tutorial_content_notification_blocked">Proses penyambungan membutuhkan Anda untuk berinteraksi dengan notifikasi dari Shizuku™. Mohon izinkan Shizuku™ untuk mengirim pemberitahuan.</string>
     <string name="home_wireless_adb_view_guide_button">Panduan langkah demi langkah</string>
-    <string name="adb_pairing_tutorial_content_finish">Kembali ke Shizuku dan mulai Shizuku.</string>
+    <string name="adb_pairing_tutorial_content_finish">Kembali ke Shizuku™ dan mulai Shizuku™.</string>
     <string name="adb_pairing_tutorial_content_left_is_clickable">Harap dicatat, bagian kiri dari opsi \"Debug nirkabel \" dapat diklik, mengetuknya akan membuka halaman baru. Hanya menyalakan sakelar di sebelah kanan yang salah.</string>
     <string name="adb_pairing_tutorial_content_miui_2">Jika tidak, Anda mungkin tidak dapat memasukan kode penyandingan dari notifikasi.</string>
-    <string name="adb_pairing_tutorial_content_network">Shizuku membutuhkan akses ke jaringan lokal. Itu dikontrol oleh izin jaringan.</string>
-    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Beberapa sistem (seperti MIUI) melarang aplikasi untuk mengakses jaringan ketika tidak terlihat, bahkan jika aplikasi berjalan dilatar depan. Tolong matikan fitur optimisasi baterai untuk Shizuku pada sistem tersebut.</string>
+    <string name="adb_pairing_tutorial_content_network">Shizuku™ membutuhkan akses ke jaringan lokal. Itu dikontrol oleh izin jaringan.</string>
+    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Beberapa sistem (seperti MIUI) melarang aplikasi untuk mengakses jaringan ketika tidak terlihat, bahkan jika aplikasi berjalan dilatar depan. Tolong matikan fitur optimisasi baterai untuk Shizuku™ pada sistem tersebut.</string>
     <string name="settings_use_system_color">Gunakan tema warna sistem</string>
-    <string name="home_adb_is_limited_description">Produsen perangkat Anda telah membatasi izin adb dan aplikasi yang menggunakan Shizuku tidak akan berfungsi dengan baik.
+    <string name="home_adb_is_limited_description">Produsen perangkat Anda telah membatasi izin adb dan aplikasi yang menggunakan Shizuku™ tidak akan berfungsi dengan baik.
 \n
 \nBiasanya, batasan ini dapat dihilangkan dengan menyesuaikan beberapa opsi di \"Opsi pengembang\". Silakan baca bantuan untuk detail tentang cara melakukan ini.
 \n
-\nAnda mungkin perlu memulai ulang Shizuku agar operasi dapat diterapkan.</string>
+\nAnda mungkin perlu memulai ulang Shizuku™ agar operasi dapat diterapkan.</string>
     <string name="home_adb_is_limited_title">Anda perlu mengambil langkah ekstra</string>
-    <string name="home_app_management_empty">Aplikasi yang telah meminta atau mendeklarasikan Shizuku akan ditampilkan di sini.</string>
+    <string name="home_app_management_empty">Aplikasi yang telah meminta atau mendeklarasikan Shizuku™ akan ditampilkan di sini.</string>
     <string name="dialog_adb_discovery_message_toggle_wireless_debugging">Coba untuk matikan dan hidupkan kembali \"Debug nirkabel\" jika terus mencari.</string>
 </resources>
