--- a/manager/src/main/res/values-ro/strings.xml
+++ b/manager/src/main/res/values-ro/strings.xml
@@ -26,15 +26,15 @@
     <string name="adb_pair_required">Parcurge mai întâi procesul de asociere.</string>
     <string name="development_settings">Opțiuni dezvoltator</string>
     <string name="notification_settings">Opțiuni de notificare</string>
-    <string name="adb_pairing_tutorial_title">Asociază Shizuku cu acest dispozitiv</string>
-    <string name="adb_pairing_tutorial_content_notification">O notificare de la Shizuku te va ajuta să finalizezi asocierea.</string>
+    <string name="adb_pairing_tutorial_title">Asociază Shizuku™ cu acest dispozitiv</string>
+    <string name="adb_pairing_tutorial_content_notification">O notificare de la Shizuku™ te va ajuta să finalizezi asocierea.</string>
     <string name="adb_pairing_tutorial_content_miui">Este posibil ca utilizatorii MIUI să fie nevoiți să schimbe stilul de notificare la „Android” în „Notificări” - „Panou de notificare” în setările sistemului.</string>
     <string name="adb_pairing_tutorial_content_miui_2">În caz contrar, este posibil să nu poți introduce codul de asociere din notificare.</string>
-    <string name="adb_pairing_tutorial_content_finish">Înapoi la Shizuku și pornește Shizuku.</string>
-    <string name="adb_pairing_tutorial_content_network">Shizuku trebuie să acceseze rețeaua locală. Este controlat de permisiunea de rețea.</string>
+    <string name="adb_pairing_tutorial_content_finish">Înapoi la Shizuku™ și pornește Shizuku™.</string>
+    <string name="adb_pairing_tutorial_content_network">Shizuku™ trebuie să acceseze rețeaua locală. Este controlat de permisiunea de rețea.</string>
     <string name="home_root_title">Pornire (pentru dispozitive root-ate)</string>
-    <string name="home_root_description">În plus, Shizuku poate fi pornit automat la pornire. Dacă nu, verifică dacă sistemul sau instrumente terțe au restricționat Shizuku.&lt;br&gt;Poți consulta %s.</string>
-    <string name="home_root_description_sui">Dacă utilizezi Magisk, poți încerca %1$s. Pentru utilizatorii root, acesta va înlocui în cele din urmă Shizuku. Reține că aplicațiile existente trebuie să se modifice puțin pentru a fi utilizate %2$s.</string>
+    <string name="home_root_description">În plus, Shizuku™ poate fi pornit automat la pornire. Dacă nu, verifică dacă sistemul sau instrumente terțe au restricționat Shizuku™.&lt;br&gt;Poți consulta %s.</string>
+    <string name="home_root_description_sui">Dacă utilizezi Magisk, poți încerca %1$s. Pentru utilizatorii root, acesta va înlocui în cele din urmă Shizuku™. Reține că aplicațiile existente trebuie să se modifice puțin pentru a fi utilizate %2$s.</string>
     <string name="home_root_button_start">Pornire</string>
     <string name="home_root_button_restart">Repornire</string>
     <string name="home_app_management_title">Gestionare aplicație</string>
@@ -44,15 +44,15 @@
         <item quantity="other">%d aplicații autorizate</item>
     </plurals>
     <string name="home_app_management_view_authorized_apps">Atinge pentru a gestiona aplicațiile autorizate</string>
-    <string name="home_learn_more_title">Învață Shizuku</string>
+    <string name="home_learn_more_title">Învață Shizuku™</string>
     <string name="app_management_dialog_adb_is_limited_title">Permisiunea adb este limitată</string>
-    <string name="app_management_item_summary_requires_root">* necesită Shizuku să rulează cu root</string>
-    <string name="home_terminal_title">Utilizează Shizuku în aplicații terminale</string>
-    <string name="home_terminal_description">Rulează comenzi prin Shizuku în aplicațiile terminale care îți plac</string>
+    <string name="app_management_item_summary_requires_root">* necesită Shizuku™ să rulează cu root</string>
+    <string name="home_terminal_title">Utilizează Shizuku™ în aplicații terminale</string>
+    <string name="home_terminal_description">Rulează comenzi prin Shizuku™ în aplicațiile terminale care îți plac</string>
     <string name="terminal_tutorial_1">Mai întâi exportă fișierele oriunde dorești. Vei găsi două fișiere, %1$s și %2$s.</string>
     <string name="terminal_export_files">Export fișiere</string>
     <string name="terminal_tutorial_2">Apoi, utilizează orice editor de text pentru a deschide și edita %1$s.</string>
-    <string name="terminal_tutorial_2_description">De exemplu, dacă vrei să folosești Shizuku în %1$s, ar trebui să înlocuiești %2$s cu %3$s (%4$s este numele pachetului al %1$s).</string>
+    <string name="terminal_tutorial_2_description">De exemplu, dacă vrei să folosești Shizuku™ în %1$s, ar trebui să înlocuiești %2$s cu %3$s (%4$s este numele pachetului al %1$s).</string>
     <string name="settings_title">Setări</string>
     <string name="settings_language">Limba</string>
     <string name="settings_user_interface">Aspect</string>
@@ -65,11 +65,11 @@
     <string name="settings_use_system_color">Utilizează culoarea temei de sistem</string>
     <string name="action_about">Despre</string>
     <string name="about_view_source_code">Vizualizează codul sursă la %s</string>
-    <string name="action_stop">Oprire Shizuku</string>
-    <string name="dialog_stop_message">Serviciul Shizuku va fi oprit.</string>
+    <string name="action_stop">Oprire Shizuku™</string>
+    <string name="dialog_stop_message">Serviciul Shizuku™ va fi oprit.</string>
     <string name="notification_channel_service_status">Starea de pornire a serviciului</string>
-    <string name="notification_service_starting">Serviciul Shizuku pornește…</string>
-    <string name="notification_service_start_failed">Pornirea serviciului Shizuku a eșuat.</string>
+    <string name="notification_service_starting">Serviciul Shizuku™ pornește…</string>
+    <string name="notification_service_start_failed">Pornirea serviciului Shizuku™ a eșuat.</string>
     <string name="notification_service_start_no_root">Nu s-a putut solicita permisiunea root.</string>
     <string name="notification_working">Se lucrează…</string>
     <string name="notification_adb_pairing_input_paring_code">Introdu codul de asociere</string>
@@ -79,8 +79,8 @@
     <string name="notification_adb_pairing_succeed_title">Asociere reușită</string>
     <string name="notification_adb_pairing_failed_title">Asocierea eșuată</string>
     <string name="notification_adb_pairing_retry">Încearcă din nou</string>
-    <string name="permission_label">accesare Shizuku</string>
-    <string name="permission_description">Permite aplicației să folosească Shizuku.</string>
+    <string name="permission_label">accesare Shizuku™</string>
+    <string name="permission_description">Permite aplicației să folosească Shizuku™.</string>
     <string name="permission_warning_template">Permiți <b>%1$s</b> să %2$s\?</string>
     <string name="grant_dialog_button_allow_always">Permite tot timpul</string>
     <string name="grant_dialog_button_deny">Refuz</string>
@@ -89,18 +89,18 @@
     <string name="toast_copied_to_clipboard">%s
 \na fost copiat în clipboard.</string>
     <string name="toast_copied_to_clipboard_with_text"><b>%s</b> a fost copiat în clipboard.</string>
-    <string name="dialog_legacy_not_support_title">%1$s nu suportă Shizuku modern</string>
-    <string name="dialog_legacy_not_support_message">Vechea versiune Shizuku a fost retrasă din martie 2019. De asemenea, vechea versiune Shizuku nu funcționează pe sisteme Android mai noi.&lt;p&gt;Cere dezvoltatorului &lt;b&gt;%1$s&lt;/b&gt; să actualizeze.</string>
-    <string name="dialog_requesting_legacy_title">%1$s solicită Shizuku vechi</string>
-    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; are suport Shizuku modern, dar solicită Shizuku vechi. Acest lucru se poate datora faptului că Shizuku nu rulează, verifică în aplicația Shizuku.&lt;p&gt;Versiunea veche a Shizuku a fost retrasă din martie 2019.</string>
-    <string name="dialog_requesting_legacy_button_open_shizuku">Deschide Shizuku</string>
+    <string name="dialog_legacy_not_support_title">%1$s nu suportă Shizuku™ modern</string>
+    <string name="dialog_legacy_not_support_message">Vechea versiune Shizuku™ a fost retrasă din martie 2019. De asemenea, vechea versiune Shizuku™ nu funcționează pe sisteme Android mai noi.&lt;p&gt;Cere dezvoltatorului &lt;b&gt;%1$s&lt;/b&gt; să actualizeze.</string>
+    <string name="dialog_requesting_legacy_title">%1$s solicită Shizuku™ vechi</string>
+    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; are suport Shizuku™ modern, dar solicită Shizuku™ vechi. Acest lucru se poate datora faptului că Shizuku™ nu rulează, verifică în aplicația Shizuku™.&lt;p&gt;Versiunea veche a Shizuku™ a fost retrasă din martie 2019.</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">Deschide Shizuku™</string>
     <string name="translation_contributors">Igor</string>
     <string name="home_status_service_version">Versiune %2$s, %1$s</string>
-    <string name="home_adb_description">Pentru dispozitivele fără root, trebuie să utilizezi adb pentru a porni Shizuku (necesită conexiune la computer). Acest proces trebuie repetat de fiecare dată când dispozitivul este repornit. <b><a href="%1$s">Citește ajutorul</a></b>.</string>
-    <string name="home_wireless_adb_description">Pe Android 11 sau o versiune ulterioară, poți activa depanarea wireless și poți porni Shizuku direct de pe dispozitiv, fără a te conecta la un computer.&lt;p&gt;Mai întâi consultă ghidul pas cu pas.</string>
+    <string name="home_adb_description">Pentru dispozitivele fără root, trebuie să utilizezi adb pentru a porni Shizuku™ (necesită conexiune la computer). Acest proces trebuie repetat de fiecare dată când dispozitivul este repornit. <b><a href="%1$s">Citește ajutorul</a></b>.</string>
+    <string name="home_wireless_adb_description">Pe Android 11 sau o versiune ulterioară, poți activa depanarea wireless și poți porni Shizuku™ direct de pe dispozitiv, fără a te conecta la un computer.&lt;p&gt;Mai întâi consultă ghidul pas cu pas.</string>
     <string name="dialog_adb_discovery_message">Activează „Depanare wireless” în „Opțiuni dezvoltator”. „Depanarea wireless” se dezactivează automat când se schimbă rețeaua.
 \n
-\nReține, nu dezactiva „Opțiuni dezvoltator” sau „Depanare USB”, altfel Shizuku va fi oprit.</string>
+\nReține, nu dezactiva „Opțiuni dezvoltator” sau „Depanare USB”, altfel Shizuku™ va fi oprit.</string>
     <string name="dialog_wireless_adb_not_enabled">Depanarea wireless nu este activată.
 \nReține că înainte de Android 11, pentru a activa depanarea wireless, conexiunea la computer este o necesitate.</string>
     <string name="dialog_adb_pairing_message">Începe asocierea prin următorii pași: „Opțiuni dezvoltator” - „Depanare wireless” - „Asocierea dispozitivului folosind codul de asociere”.
@@ -110,29 +110,29 @@
     <string name="adb_pairing_requires_multi_window_reason">Sistemul necesită dialogul de asociere întotdeauna vizibil, utilizarea modului ecran divizat este singura modalitate de a lăsa această aplicație și dialogul de sistem vizibile în același timp.</string>
     <string name="adb_pairing_tutorial_content_steps">Accesează „Opțiuni dezvoltator” - „Depanare wireless”. Atinge „Asociere dispozitiv cu codul de asociere”, vei vedea un cod din șase cifre.</string>
     <string name="adb_pairing_tutorial_content_enter_pairing_code">Introdu codul în notificare pentru a finaliza asocierea.</string>
-    <string name="adb_pairing_tutorial_content_notification_blocked">Procesul de asociere necesită să interacționarea cu o notificare de la Shizuku. Permite lui Shizuku să afișeze notificări.</string>
-    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Unele sisteme (cum ar fi MIUI) nu permit aplicațiilor să acceseze rețeaua atunci când nu sunt vizibile, chiar dacă aplicația folosește serviciul din prim-plan ca standard. Dezactivarea funcțiilor de optimizare a bateriei pentru Shizuku pe astfel de sisteme este necesară.</string>
-    <string name="home_learn_more_description">Află cum să dezvolți cu Shizuku</string>
+    <string name="adb_pairing_tutorial_content_notification_blocked">Procesul de asociere necesită să interacționarea cu o notificare de la Shizuku™. Permite lui Shizuku™ să afișeze notificări.</string>
+    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Unele sisteme (cum ar fi MIUI) nu permit aplicațiilor să acceseze rețeaua atunci când nu sunt vizibile, chiar dacă aplicația folosește serviciul din prim-plan ca standard. Dezactivarea funcțiilor de optimizare a bateriei pentru Shizuku™ pe astfel de sisteme este necesară.</string>
+    <string name="home_learn_more_description">Află cum să dezvolți cu Shizuku™</string>
     <string name="app_management_dialog_adb_is_limited_message">Este foarte posibil ca producătorul dispozitivului să limiteze permisiunea adb.&lt;p&gt;Este posibil să existe o soluție pentru acest sistem în &lt;b&gt;&lt;a href=\"%1$s\"&gt;acest document&lt;/a&gt;&lt;/b&gt;.</string>
     <string name="terminal_tutorial_1_description">Dacă există fișiere cu același nume în dosarul selectat, acestea vor fi șterse.
 \n
-\nFuncția de export folosește SAF (Storage Access Framework). A fost raportat că MIUI întrerupe funcțiile SAF. Dacă utilizezi MIUI, poate fi necesar să extragi fișierul din apk-ul lui Shizuku sau să-l descarci de pe GitHub.</string>
-    <string name="terminal_tutorial_3">În cele din urmă, mută fișierele într-un loc unde aplicația de terminal le poate accesa, vei putea folosi %1$s pentru a rula comenzi prin Shizuku.</string>
+\nFuncția de export folosește SAF (Storage Access Framework). A fost raportat că MIUI întrerupe funcțiile SAF. Dacă utilizezi MIUI, poate fi necesar să extragi fișierul din apk-ul lui Shizuku™ sau să-l descarci de pe GitHub.</string>
+    <string name="terminal_tutorial_3">În cele din urmă, mută fișierele într-un loc unde aplicația de terminal le poate accesa, vei putea folosi %1$s pentru a rula comenzi prin Shizuku™.</string>
     <string name="terminal_tutorial_3_description">Câteva sfaturi: acordă permisiunea de execuție pentru %1$s și adaugă la %2$s, vei putea folosi %1$s direct.</string>
-    <string name="rish_description">Cu %1$s, în orice aplicație de terminal, vei putea conecta și interacționa cu shell-urile rulate de Shizuku. &lt;p&gt;Despre utilizarea detaliată %1$s, atinge pentru a vizualiza documentul.</string>
+    <string name="rish_description">Cu %1$s, în orice aplicație de terminal, vei putea conecta și interacționa cu shell-urile rulate de Shizuku™. &lt;p&gt;Despre utilizarea detaliată %1$s, atinge pentru a vizualiza documentul.</string>
     <string name="settings_translation_contributors">Colaboratori de traduceri</string>
-    <string name="settings_start_on_boot_summary">Pentru dispozitivele root-ate, Shizuku poate porni automat la pornire</string>
+    <string name="settings_start_on_boot_summary">Pentru dispozitivele root-ate, Shizuku™ poate porni automat la pornire</string>
     <string name="notification_channel_adb_pairing">Asociere prin depanare fără fir</string>
     <string name="notification_adb_pairing_stop_searching">Oprire căutare</string>
-    <string name="notification_adb_pairing_succeed_text">Poți porni serviciul Shizuku acum.</string>
+    <string name="notification_adb_pairing_succeed_text">Poți porni serviciul Shizuku™ acum.</string>
     <string name="start_with_root_failed">Nu se poate porni serviciul deoarece permisiunea root nu este acordată sau acest dispozitiv nu este root-at.</string>
     <string name="adb_pairing_tutorial_content_left_is_clickable">Reține că partea din stânga a opțiunii \"Depanare fără fir\" este click-abilă, apăsarea acesteia va deschide o pagina nouă. Este incorect să pornești doar comutatorul din dreapta.</string>
-    <string name="home_app_management_empty">Aplicațiile care au solicitat sau au declarat Shizuku se vor afișa aici.</string>
-    <string name="home_adb_is_limited_description">Producătorul dispozitivului are permisiuni adb limitate, iar aplicațiile care folosesc Shizuku nu vor funcționa corect. 
+    <string name="home_app_management_empty">Aplicațiile care au solicitat sau au declarat Shizuku™ se vor afișa aici.</string>
+    <string name="home_adb_is_limited_description">Producătorul dispozitivului are permisiuni adb limitate, iar aplicațiile care folosesc Shizuku™ nu vor funcționa corect. 
 \n
 \nDe obicei, această limitare poate fi ridicată prin ajustarea unor opțiuni din „Opțiuni pentru dezvoltatori”. Citește ajutorul pentru detalii despre cum să faci acest lucru.
 \n
-\nPoate fi necesar să repornești Shizuku pentru ca operațiunea să intre în vigoare.</string>
+\nPoate fi necesar să repornești Shizuku™ pentru ca operațiunea să intre în vigoare.</string>
     <string name="home_adb_is_limited_title">Trebuie să faci un pas suplimentar</string>
     <string name="dialog_adb_discovery_message_toggle_wireless_debugging">Încearcă să dezactivezi și să activezi „Depanare fără fir” dacă caută în continuare.</string>
 </resources>
