--- a/manager/src/main/res/values-ru/strings.xml
+++ b/manager/src/main/res/values-ru/strings.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="dialog_requesting_legacy_button_open_shizuku">Открыть Shizuku</string>
-    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; имеет поддержку актуального Shizuku, но запрашивает его устаревшую версию. Возможно это происходит оттого, что Shizuku не запущен, пожалуйста, перепроверьте в приложении Shizuku.&lt;p&gt;Изначальная версия Shizuku признана устаревшей ещё в марте 2019 года.</string>
-    <string name="dialog_requesting_legacy_title">%1$s запрашивает устаревшую версию Shizuku</string>
-    <string name="dialog_legacy_not_support_message">Изначальная версия Shizuku устарела с марта 2019 года. Кроме того, она не работает на новых системах Android.&lt;p&gt;Пожалуйста, попросите разработчика &lt;b&gt;%1$s&lt;/b&gt; внести поправки.</string>
-    <string name="dialog_legacy_not_support_title">%1$s не поддерживает актуальную версию Shizuku</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">Открыть Shizuku™</string>
+    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; имеет поддержку актуального Shizuku™, но запрашивает его устаревшую версию. Возможно это происходит оттого, что Shizuku™ не запущен, пожалуйста, перепроверьте в приложении Shizuku™.&lt;p&gt;Изначальная версия Shizuku™ признана устаревшей ещё в марте 2019 года.</string>
+    <string name="dialog_requesting_legacy_title">%1$s запрашивает устаревшую версию Shizuku™</string>
+    <string name="dialog_legacy_not_support_message">Изначальная версия Shizuku™ устарела с марта 2019 года. Кроме того, она не работает на новых системах Android.&lt;p&gt;Пожалуйста, попросите разработчика &lt;b&gt;%1$s&lt;/b&gt; внести поправки.</string>
+    <string name="dialog_legacy_not_support_title">%1$s не поддерживает актуальную версию Shizuku™</string>
     <string name="toast_copied_to_clipboard_with_text">&lt;b&gt;%s&lt;/b&gt; было скопировано в буфер обмена.</string>
     <string name="toast_copied_to_clipboard">%s
 \nбыло скопировано в буфер обмена.</string>
     <string name="dialog_cannot_open_browser_title">Не удается запустить браузер</string>
     <string name="start_with_root_failed">Не удалось запустить службу. Root права не выданы или они недоступны на устройстве.</string>
     <string name="starter">Запуск</string>
-    <string name="permission_label">доступ Shizuku</string>
+    <string name="permission_label">доступ Shizuku™</string>
     <string name="notification_working">Работает…</string>
     <string name="notification_service_start_no_root">Не удалось запросить root права.</string>
-    <string name="notification_service_start_failed">Не удалось запустить службу Shizuku.</string>
-    <string name="notification_service_starting">Служба Shizuku запускается…</string>
+    <string name="notification_service_start_failed">Не удалось запустить службу Shizuku™.</string>
+    <string name="notification_service_starting">Служба Shizuku™ запускается…</string>
     <string name="notification_channel_service_status">Состояние работы службы</string>
-    <string name="dialog_stop_message">Служба Shizuku будет остановлена.</string>
-    <string name="action_stop">Остановить Shizuku</string>
+    <string name="dialog_stop_message">Служба Shizuku™ будет остановлена.</string>
+    <string name="action_stop">Остановить Shizuku™</string>
     <string name="about_view_source_code">Исходный код доступен на %s</string>
     <string name="action_about">О приложении</string>
     <string name="settings_translation_summary">Помогите перевести %s на ваш язык</string>
@@ -30,11 +30,11 @@
     <string name="settings_user_interface">Внешний вид</string>
     <string name="settings_language">Язык</string>
     <string name="settings_title">Настройки</string>
-    <string name="app_management_item_summary_requires_root">* требуется Shizuku, запущенный с root правами</string>
+    <string name="app_management_item_summary_requires_root">* требуется Shizuku™, запущенный с root правами</string>
     <string name="app_management_dialog_adb_is_limited_message">Возможно, что производитель вашего устройства ограничивает доступ к adb.&lt;p&gt;Решение для вашей системы может быть описано &lt;b&gt;&lt;a href=\"%1$s\"&gt;здесь&lt;/a&gt;&lt;/b&gt;.</string>
     <string name="app_management_dialog_adb_is_limited_title">Доступ к adb ограничен</string>
-    <string name="home_learn_more_description">Узнайте, как начать разрабатывать с Shizuku</string>
-    <string name="home_learn_more_title">Узнать больше о Shizuku</string>
+    <string name="home_learn_more_description">Узнайте, как начать разрабатывать с Shizuku™</string>
+    <string name="home_learn_more_title">Узнать больше о Shizuku™</string>
     <string name="home_app_management_view_authorized_apps">Нажмите для управления списком допущенных приложений</string>
     <plurals name="home_app_management_authorized_apps_count">
         <item quantity="one">Доступно для %d приложения</item>
@@ -45,7 +45,7 @@
     <string name="home_app_management_title">Управление приложениями</string>
     <string name="home_root_button_restart">Перезапустить</string>
     <string name="home_root_button_start">Запустить</string>
-    <string name="home_root_description">В дополнение, Shizuku может запускаться сразу после загрузки системы. Если этого не происходит, проверьте, нет ли ограничений со стороны вашей системы или сторонних инструментов.&lt;br&gt;Вы можете обратиться в %s.</string>
+    <string name="home_root_description">В дополнение, Shizuku™ может запускаться сразу после загрузки системы. Если этого не происходит, проверьте, нет ли ограничений со стороны вашей системы или сторонних инструментов.&lt;br&gt;Вы можете обратиться в %s.</string>
     <string name="home_root_title">Запуск (для устройств с root правами)</string>
     <string name="development_settings">Параметры разработчика</string>
     <string name="adb_pair_required">Пожалуйста, сперва пройдите процедуру сопряжения.</string>
@@ -68,7 +68,7 @@
     <string name="dialog_adb_port">Порт</string>
     <string name="dialog_adb_discovery_message">Пожалуйста, включите пункт «Отладка по Wi-Fi» в меню «Для разработчиков». «Отладка по Wi-Fi» автоматически отключается при изменении сети.
 \n
-\nВнимание: не отключайте пункт «Для разработчиков» или «Отладка по USB», иначе Shizuku остановит работу.</string>
+\nВнимание: не отключайте пункт «Для разработчиков» или «Отладка по USB», иначе Shizuku™ остановит работу.</string>
     <string name="dialog_adb_discovery">Ожидание службы отладки по Wi-Fi</string>
     <string name="home_wireless_adb_title">Запуск через отладку по Wi-Fi</string>
     <string name="home_adb_dialog_view_command_button_send">Отправить</string>
@@ -76,64 +76,64 @@
     <string name="home_adb_dialog_view_command_message">&lt;font face=monospace&gt;%1$s&lt;/font&gt;&lt;br&gt;&lt;br&gt;* Есть и другие способы; сначала убедитесь, что сперва прочли справку.</string>
     <string name="home_adb_button_view_command">Просмотр команды</string>
     <string name="home_adb_button_view_help">Читать справку</string>
-    <string name="home_adb_description">Для устройств без root прав потребуется обращаться к adb для запуска Shizuku (не обойтись без соединения с компьютером). Этот процесс нужно повторять каждый раз, когда устройство перезагружается. Пожалуйста, <b><a href="%1$s">прочтите справку</a></b>.</string>
+    <string name="home_adb_description">Для устройств без root прав потребуется обращаться к adb для запуска Shizuku™ (не обойтись без соединения с компьютером). Этот процесс нужно повторять каждый раз, когда устройство перезагружается. Пожалуйста, <b><a href="%1$s">прочтите справку</a></b>.</string>
     <string name="home_adb_title">Запуск через соединение с ПК</string>
     <string name="home_status_service_version_update">Версия %2$s, %1$s&lt;br&gt;Запустите снова что бы обновиться до версии %3$s</string>
     <string name="home_status_service_version">Версия %2$s, %1$s</string>
     <string name="home_status_service_not_running">%1$s не запущен</string>
     <string name="home_status_service_is_running">%1$s запущен</string>
     <string name="translation_contributors">sermart1234, ruvlad</string>
-    <string name="settings_start_on_boot_summary">На устройствах с root правами Shizuku может автоматически запускаться после загрузки системы</string>
+    <string name="settings_start_on_boot_summary">На устройствах с root правами Shizuku™ может автоматически запускаться после загрузки системы</string>
     <string name="settings_start_on_boot">Автозапуск (с root правами)</string>
     <string name="grant_dialog_button_allow_always">Разрешить всегда</string>
     <string name="grant_dialog_button_deny">Запретить</string>
     <string name="permission_warning_template">Разрешить <b>%1$s</b> следующее: %2$s\?</string>
-    <string name="home_root_description_sui">Если вы пользуетесь Magisk, можете попробовать %1$s. Для пользователей с root правами он в конечном итоге заменит Shizuku. Обратите внимание, что в уже вышедшие приложения должны внести небольшие изменения, чтобы они заработали с %2$s.</string>
-    <string name="permission_description">Разрешить приложению использовать Shizuku.</string>
+    <string name="home_root_description_sui">Если вы пользуетесь Magisk, можете попробовать %1$s. Для пользователей с root правами он в конечном итоге заменит Shizuku™. Обратите внимание, что в уже вышедшие приложения должны внести небольшие изменения, чтобы они заработали с %2$s.</string>
+    <string name="permission_description">Разрешить приложению использовать Shizuku™.</string>
     <string name="terminal_tutorial_3_description">Небольшой совет: выдайте %1$s права на выполнение и пропишите в %2$s, чтобы обращаться к %1$s напрямую.</string>
-    <string name="terminal_tutorial_3">И последнее: переместите файлы туда, куда сможет обращаться ваше приложение-терминал, и отныне станет возможным запускать команды через Shizuku посредством %1$s.</string>
-    <string name="terminal_tutorial_2_description">К примеру: если вы захотите использовать Shizuku внутри %1$s, нужно заменить %2$s на %3$s (%4$s – это имя пакета эмулятора терминала %1$s).</string>
+    <string name="terminal_tutorial_3">И последнее: переместите файлы туда, куда сможет обращаться ваше приложение-терминал, и отныне станет возможным запускать команды через Shizuku™ посредством %1$s.</string>
+    <string name="terminal_tutorial_2_description">К примеру: если вы захотите использовать Shizuku™ внутри %1$s, нужно заменить %2$s на %3$s (%4$s – это имя пакета эмулятора терминала %1$s).</string>
     <string name="terminal_tutorial_2">Затем откройте и отредактируйте %1$s любым текстовым редактором.</string>
     <string name="terminal_export_files">Экспорт файлов</string>
     <string name="terminal_tutorial_1_description">Если в выбранной папке уже есть файлы с такими же именами, они будут удалены.
 \n
-\nДля работы функции экспорта используется SAF (Storage Access Framework). Сообщается, что на MIUI сломаны механизмы SAF, поэтому там может понадобиться вручную извлечь файл из .apk Shizuku или скачать его с GitHub.</string>
+\nДля работы функции экспорта используется SAF (Storage Access Framework). Сообщается, что на MIUI сломаны механизмы SAF, поэтому там может понадобиться вручную извлечь файл из .apk Shizuku™ или скачать его с GitHub.</string>
     <string name="terminal_tutorial_1">Сначала экспортируйте файлы в любое место на свое усмотрение. Там появятся два файла: %1$s и %2$s.</string>
-    <string name="home_terminal_description">Запуск команд через Shizuku прямиком из любимых приложений-терминалов</string>
-    <string name="home_terminal_title">Применение Shizuku в эмуляторах терминала</string>
+    <string name="home_terminal_description">Запуск команд через Shizuku™ прямиком из любимых приложений-терминалов</string>
+    <string name="home_terminal_title">Применение Shizuku™ в эмуляторах терминала</string>
     <string name="home_wireless_adb_description">На Android 11 или выше Вы можете включить отладку по Wi-Fi без дополнительного ПО, без подключения к компьютеру. Пожалуйста, сперва просмотрите инструкцию</string>
     <string name="adb_pairing_tutorial_content_miui">На оболочке MIUI может потребоваться сменить параметр в пункте системных настроек «Уведомления» – «Стиль уведомлений» на «Android».</string>
     <string name="adb_pairing_tutorial_content_steps">Перейдите в «Параметры разработчика» – «Отладка по Wi-Fi». Нажмите на «Сопряжение устройства с помощью кода сопряжения» и увидите шестизначный код.</string>
     <string name="adb_pairing_tutorial_content_enter_pairing_code">Введите код в уведомление для завершения процедуры сопряжения.</string>
-    <string name="adb_pairing_tutorial_content_notification">Уведомление от Shizuku поможет завершить процедуру сопряжения.</string>
-    <string name="rish_description">Посредством %1$s из любого приложения-терминала можно подключаться и взаимодействовать с shell, запущенной Shizuku. &lt;p&gt;Нажмите здесь для просмотра инструкции по работе с %1$s.</string>
+    <string name="adb_pairing_tutorial_content_notification">Уведомление от Shizuku™ поможет завершить процедуру сопряжения.</string>
+    <string name="rish_description">Посредством %1$s из любого приложения-терминала можно подключаться и взаимодействовать с shell, запущенной Shizuku™. &lt;p&gt;Нажмите здесь для просмотра инструкции по работе с %1$s.</string>
     <string name="notification_adb_pairing_working_title">Выполняется сопряжение</string>
     <string name="notification_adb_pairing_succeed_title">Сопряжение выполнено</string>
-    <string name="notification_adb_pairing_succeed_text">Теперь можете запустить службу Shizuku.</string>
+    <string name="notification_adb_pairing_succeed_text">Теперь можете запустить службу Shizuku™.</string>
     <string name="notification_adb_pairing_failed_title">Не удалось выполнить сопряжение</string>
     <string name="notification_adb_pairing_retry">Повторить попытку</string>
-    <string name="adb_pairing_tutorial_title">Сопряжение Shizuku с вашим устройством</string>
+    <string name="adb_pairing_tutorial_title">Сопряжение Shizuku™ с вашим устройством</string>
     <string name="home_wireless_adb_description_pre_11">"Для отладки по Wi-Fi в Android до 11 версии  потребуется соединения с компьютером."</string>
     <string name="home_wireless_adb_view_guide_button">Пошаговая инструкция</string>
     <string name="notification_settings">Настройки уведомлений</string>
-    <string name="adb_pairing_tutorial_content_notification_blocked">Процедура сопряжения подразумевает взаимодействие с уведомлением от Shizuku. Для продолжения выдайте Shizuku разрешение на показ уведомлений.</string>
-    <string name="adb_pairing_tutorial_content_finish">Вернитесь в приложение Shizuku и запустите его.</string>
+    <string name="adb_pairing_tutorial_content_notification_blocked">Процедура сопряжения подразумевает взаимодействие с уведомлением от Shizuku™. Для продолжения выдайте Shizuku™ разрешение на показ уведомлений.</string>
+    <string name="adb_pairing_tutorial_content_finish">Вернитесь в приложение Shizuku™ и запустите его.</string>
     <string name="notification_channel_adb_pairing">Сопряжение с отладкой по Wi-Fi</string>
     <string name="notification_adb_pairing_input_paring_code">Введите код подключения</string>
     <string name="notification_adb_pairing_searching_for_service_title">Ожидание службы сопряжения</string>
     <string name="notification_adb_pairing_service_found_title">Служба найдена</string>
     <string name="notification_adb_pairing_stop_searching">Прекратить поиск</string>
     <string name="adb_pairing_tutorial_content_miui_2">Иначе вы, вероятнее всего, не сможете ввести код сопряжения из уведомления.</string>
-    <string name="adb_pairing_tutorial_content_network">Shizuku требуется доступ к локальной сети. Он управляется сетевым разрешением.</string>
-    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Некоторые системы (та же MIUI) не разрешают приложениям доступ к сети, когда они не на экране, даже если те в основе задействуют службу переднего плана. Пожалуйста, добавьте Shizuku в исключения алгоритмов оптимизации заряда батареи на таких системах.</string>
+    <string name="adb_pairing_tutorial_content_network">Shizuku™ требуется доступ к локальной сети. Он управляется сетевым разрешением.</string>
+    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Некоторые системы (та же MIUI) не разрешают приложениям доступ к сети, когда они не на экране, даже если те в основе задействуют службу переднего плана. Пожалуйста, добавьте Shizuku™ в исключения алгоритмов оптимизации заряда батареи на таких системах.</string>
     <string name="settings_use_system_color">Палитра цветов из системы</string>
     <string name="adb_pairing_tutorial_content_left_is_clickable">Обратите внимание, что левая часть опции \"Беспроводная отладка\" является кликабельной, нажатие на нее открывает новую страницу. Нажатие только на переключатель (справа) является неправильным.</string>
     <string name="dialog_adb_discovery_message_toggle_wireless_debugging">Попробуй выключить и снова включить \"Отладка по Wi-Fi\", если поиск продолжается.</string>
-    <string name="home_app_management_empty">Приложения, которые запросили или задекларировали использование Shizuku будут отображаться здесь.</string>
-    <string name="home_adb_is_limited_description">Производитель вашего устройства ограничил права ADB, приложения использующие Shizuku будут работать не корректно.
+    <string name="home_app_management_empty">Приложения, которые запросили или задекларировали использование Shizuku™ будут отображаться здесь.</string>
+    <string name="home_adb_is_limited_description">Производитель вашего устройства ограничил права ADB, приложения использующие Shizuku™ будут работать не корректно.
 \n
 \nОбычно эти ограничения можно снять в настройках для разработчиков. Пожалуйста, прочитай раздел помощи, чтобы узнать как это сделать.
 \n
-\nВозможно Вам понадобится перезапустить Shizuku для применения изменений.</string>
+\nВозможно Вам понадобится перезапустить Shizuku™ для применения изменений.</string>
     <string name="home_adb_is_limited_title">Нужен дополнительный шаг</string>
 </resources>
