--- a/manager/src/main/res/values-sl/strings.xml
+++ b/manager/src/main/res/values-sl/strings.xml
@@ -9,15 +9,15 @@
     <string name="notification_channel_adb_pairing">Seznanjanje brezžičnega razhroščevanja</string>
     <string name="notification_working">V teku…</string>
     <string name="notification_service_start_no_root">Neuspešna zahteva za root dovoljenje.</string>
-    <string name="notification_service_start_failed">Zagon storitve Shizuku ni uspel.</string>
-    <string name="notification_service_starting">Storitev Shizuku se zaganja…</string>
+    <string name="notification_service_start_failed">Zagon storitve Shizuku™ ni uspel.</string>
+    <string name="notification_service_starting">Storitev Shizuku™ se zaganja…</string>
     <string name="notification_channel_service_status">Status zagona storitve</string>
-    <string name="dialog_stop_message">Storitev Shizuku bo bila ustavljena.</string>
-    <string name="action_stop">Ustavi Shizuku</string>
+    <string name="dialog_stop_message">Storitev Shizuku™ bo bila ustavljena.</string>
+    <string name="action_stop">Ustavi Shizuku™</string>
     <string name="about_view_source_code">Poglej izvorno kodo na %s</string>
     <string name="action_about">O</string>
     <string name="settings_use_system_color">Uporabi sistemsko barvo teme</string>
-    <string name="settings_start_on_boot_summary">Za naprave z rootom, se lahko Shizuku zažene avtomatsko na zagonu</string>
+    <string name="settings_start_on_boot_summary">Za naprave z rootom, se lahko Shizuku™ zažene avtomatsko na zagonu</string>
     <string name="settings_start_on_boot">Zaženi na zagonu (root)</string>
     <string name="settings_translation_summary">Pomagajte nam prevajati %s v vaš jezik</string>
     <string name="dialog_adb_pairing_message">Prosimo, začnite z seznanitvijo po teh korakih: \"Nastavitve za razvijalce\" - \"Seznanjanje naprave z seznantitveno kodo\".
@@ -32,15 +32,15 @@
     <string name="dialog_adb_pairing_title">Seznani z napravo</string>
     <string name="adb_pairing">Seznanjanje</string>
     <string name="dialog_adb_invalid_port">Vrata so število v obsegu od 1 do 65535.</string>
-    <string name="home_adb_description">Za naprave brez root-a, potrebujete adb, da zaženete Shizuku (potrebna je računalniška povezava). Ta proces je potrebno ponoviti vsakič, ko se naprava ponovno zažene. Prosimo <b><a href="%1$s">preberite pomoč</a></b>.</string>
+    <string name="home_adb_description">Za naprave brez root-a, potrebujete adb, da zaženete Shizuku™ (potrebna je računalniška povezava). Ta proces je potrebno ponoviti vsakič, ko se naprava ponovno zažene. Prosimo <b><a href="%1$s">preberite pomoč</a></b>.</string>
     <string name="dialog_adb_port">Vrata</string>
     <string name="dialog_adb_discovery_message">Prosimo omogočite \"Brezžično razhroščevanje\" v \"Nastavitvah za razvijalce\". \"Brezžično razhroščevanje\" je avtomatsko onemogočeno, ko se spremeni omrežje.
 \n
-\nPozor! Ne onemogočajte \"Nastavitev za razvijalce\" ali \"USB razhroščevanja\", drugače bo Shizuku ustavljen.</string>
+\nPozor! Ne onemogočajte \"Nastavitev za razvijalce\" ali \"USB razhroščevanja\", drugače bo Shizuku™ ustavljen.</string>
     <string name="dialog_adb_discovery">Iskanje storitve za Brezžično razhroščevanje</string>
     <string name="home_wireless_adb_view_guide_button">Vodnik po korakih</string>
     <string name="home_wireless_adb_description_pre_11">Pred Androidom 11, je povezava z računalnikom potrebna, da omogočite Brezžično razhroščevanje.</string>
-    <string name="home_wireless_adb_description">Na Androidu 11 ali več, lahko vklopite Brezžično razhroščevanje in začnete Shizuku direktno iz vaše naprave, brez povezovanja na računalnik.&lt;p&gt;Prosimo, najprej poglejte vodnik po korakih.</string>
+    <string name="home_wireless_adb_description">Na Androidu 11 ali več, lahko vklopite Brezžično razhroščevanje in začnete Shizuku™ direktno iz vaše naprave, brez povezovanja na računalnik.&lt;p&gt;Prosimo, najprej poglejte vodnik po korakih.</string>
     <string name="home_wireless_adb_title">Začni preko Brezžičnega razhroščevanja</string>
     <string name="home_adb_dialog_view_command_button_send">Pošlji</string>
     <string name="home_adb_dialog_view_command_copy_button">Kopiraj</string>
