--- a/manager/src/main/res/values-uk/strings.xml
+++ b/manager/src/main/res/values-uk/strings.xml
@@ -11,13 +11,13 @@
     <string name="notification_channel_service_status">Статус запуску серав</string>
     <string name="home_adb_dialog_view_command_copy_button">Копіювати</string>
     <string name="dialog_cannot_open_browser_title">Не вдається запустити браузер</string>
-    <string name="home_learn_more_title">Вивчіть Shizuku</string>
-    <string name="home_learn_more_description">Дізнайтеся, як розробляти з Shizuku</string>
-    <string name="notification_service_start_failed">Помилка запуску служби Shizuku.</string>
+    <string name="home_learn_more_title">Вивчіть Shizuku™</string>
+    <string name="home_learn_more_description">Дізнайтеся, як розробляти з Shizuku™</string>
+    <string name="notification_service_start_failed">Помилка запуску служби Shizuku™.</string>
     <string name="notification_service_start_no_root">Помилка запиту на root доступ.</string>
-    <string name="notification_service_starting">Сервіс Shizuku запущено…</string>
+    <string name="notification_service_starting">Сервіс Shizuku™ запущено…</string>
     <string name="notification_working">Працює…</string>
-    <string name="dialog_requesting_legacy_button_open_shizuku">Відкрити Shizuku</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">Відкрити Shizuku™</string>
     <string name="home_root_button_restart">Перезапуск</string>
     <string name="home_status_service_is_running">%1$s працює</string>
     <string name="home_adb_dialog_view_command_button_send">Відправити</string>
@@ -27,12 +27,12 @@
     <string name="settings_user_interface">Зовнішній вигляд</string>
     <string name="settings_startup">Стартап</string>
     <string name="home_status_service_version_update">версія %2$s, %1$s&lt;br&gt;почніть оновлюватися до версії %3$s</string>
-    <string name="permission_label">доступ до Shizuku</string>
-    <string name="app_management_item_summary_requires_root">* потрібен root, щоб запускався Shizuku</string>
+    <string name="permission_label">доступ до Shizuku™</string>
+    <string name="app_management_item_summary_requires_root">* потрібен root, щоб запускався Shizuku™</string>
     <string name="home_status_service_not_running">%1$s не працює</string>
     <string name="about_view_source_code"><![CDATA[Переглянути вихідний код на %s]]></string>
     <string name="app_management_dialog_adb_is_limited_message">Можливо, ваш виробник пристрою лімітує дозвіл adb.&lt;p&gt;Можливо, є рішення для вашої системи у &lt;b&gt;&lt;a href=\"%1$s\"&gt;цьому документі&lt;/a&gt;&lt;/b&gt;.</string>
-    <string name="home_adb_description">Для пристроїв без root потрібно використовувати ADB для запуску Shizuku (потрібне підключення до комп’ютера). Цей процес потрібно повторювати кожного разу, коли пристрій перезавантажується. Будь ласка, <b><a href="%1$s">прочитайте довідку</a></b>.</string>
+    <string name="home_adb_description">Для пристроїв без root потрібно використовувати ADB для запуску Shizuku™ (потрібне підключення до комп’ютера). Цей процес потрібно повторювати кожного разу, коли пристрій перезавантажується. Будь ласка, <b><a href="%1$s">прочитайте довідку</a></b>.</string>
     <string name="home_adb_title">Почніть з підключення до ПК</string>
     <string name="home_root_title"><![CDATA[Запустіть службу з root доступом]]></string>
     <string name="toast_copied_to_clipboard_with_text"><b>%s</b> скопійовано в буфер обміну.</string>
@@ -45,17 +45,17 @@
     <string name="grant_dialog_button_deny">Заборонити</string>
     <string name="permission_warning_template">Дозволити додатку <b>%1$s</b> таке: %2$s\?</string>
     <string name="home_wireless_adb_title">Запуск за допомогою налагоджування через Wi-Fi</string>
-    <string name="adb_pairing_tutorial_content_notification">Повідомлення від Shizuku допоможе вам закінчити парування.</string>
+    <string name="adb_pairing_tutorial_content_notification">Повідомлення від Shizuku™ допоможе вам закінчити парування.</string>
     <string name="adb_pairing_tutorial_content_enter_pairing_code">Введіть код в повідомленні щоб завершити парування.</string>
-    <string name="adb_pairing_tutorial_title">Парувати Shizuku з вашим пристроєм</string>
+    <string name="adb_pairing_tutorial_title">Парувати Shizuku™ з вашим пристроєм</string>
     <string name="notification_settings">Налаштування повідомлень</string>
-    <string name="adb_pairing_tutorial_content_notification_blocked">Процес парування потребує, щоб ви взаємодіяли із сповіщенням від Shizuku. Будь ласка, дозвольте Shizuku публікувати сповіщення.</string>
-    <string name="home_wireless_adb_description">Починаючи з Android 11 та вище, ви можете ввімкнути налагодження через WiFi та запустити Shizuku прямо з вашого пристрою, не під\'єднуючись до комп\'ютеру.&lt;p&gt;Будь ласка, спочатку перегляньте інструкцію.</string>
+    <string name="adb_pairing_tutorial_content_notification_blocked">Процес парування потребує, щоб ви взаємодіяли із сповіщенням від Shizuku™. Будь ласка, дозвольте Shizuku™ публікувати сповіщення.</string>
+    <string name="home_wireless_adb_description">Починаючи з Android 11 та вище, ви можете ввімкнути налагодження через WiFi та запустити Shizuku™ прямо з вашого пристрою, не під\'єднуючись до комп\'ютеру.&lt;p&gt;Будь ласка, спочатку перегляньте інструкцію.</string>
     <string name="home_wireless_adb_view_guide_button">Покрокова інструкція</string>
     <string name="dialog_adb_discovery">Пошук сервісу бездротового налагодження</string>
     <string name="dialog_adb_discovery_message">Будь ласка, увімкніть \"Налагодження через Wi-Fi\" в \"Параметрах розробника\". \"Налагодження через Wi-Fi\" автоматично вимикається при зміні мереж.
 \n
-\nЗверніть увагу, не вимикайте \"Параметри розробника\" чи \"Налагодження USB\", інакше Shizuku буде зупинено.</string>
+\nЗверніть увагу, не вимикайте \"Параметри розробника\" чи \"Налагодження USB\", інакше Shizuku™ буде зупинено.</string>
     <string name="dialog_adb_port">Порт</string>
     <string name="dialog_adb_invalid_port">Порт – це ціле число від 1 до 65535.</string>
     <string name="adb_pairing">Парування</string>
@@ -81,30 +81,30 @@
     <string name="adb_pairing_tutorial_content_miui">Користувачам MIUI, иожливо, доведеться змінити стіль сповіщень на \"Android\" із \"Сповіщення\" - \"Панель сповіщень\" в системних налаштуваннях.</string>
     <string name="settings_title">Налаштування</string>
     <string name="adb_pairing_tutorial_content_miui_2">В іншому випадку, ви, можливо, не зможете увести код парування з повідомлення.</string>
-    <string name="home_terminal_title">Використовувати Shizuku в програмах терміналу</string>
-    <string name="home_terminal_description">Виконуйте команди через Shizuku у програмах терміналу, які вам подобаються</string>
+    <string name="home_terminal_title">Використовувати Shizuku™ в програмах терміналу</string>
+    <string name="home_terminal_description">Виконуйте команди через Shizuku™ у програмах терміналу, які вам подобаються</string>
     <string name="terminal_tutorial_2">Тоді, використайте будь-який текстовий редактор та редагуйте %1$s.</string>
-    <string name="terminal_tutorial_3">Нарешті, перемістіть файли туди, де програма терміналу матиме доступ до них, ви зможете використовувати %1$s для запуску команд через Shizuku.</string>
+    <string name="terminal_tutorial_3">Нарешті, перемістіть файли туди, де програма терміналу матиме доступ до них, ви зможете використовувати %1$s для запуску команд через Shizuku™.</string>
     <string name="settings_translation">Беріть участь у перекладі</string>
     <string name="settings_translation_summary">Допоможіть нам перекласти %s на вашу мову</string>
     <string name="notification_adb_pairing_succeed_title">Парування успішне</string>
     <string name="terminal_tutorial_1_description">Файли з такою ж назвою у вибраній папці буде видалено.
 \n
-\nФункція експорту використовує SAF (Storage Access Framework). Були скарги на те, що MIUI ламає функції SAF. Якщо ви користуєтесь MIUI, вам потрібно розпакувати файл з apk-файлу Shizuku або завантажити його з GitHub.</string>
+\nФункція експорту використовує SAF (Storage Access Framework). Були скарги на те, що MIUI ламає функції SAF. Якщо ви користуєтесь MIUI, вам потрібно розпакувати файл з apk-файлу Shizuku™ або завантажити його з GitHub.</string>
     <string name="notification_adb_pairing_retry">Спробувати ще раз</string>
     <string name="notification_adb_pairing_failed_title">Парування невдале</string>
-    <string name="action_stop">Зупинити Shizuku</string>
-    <string name="dialog_stop_message">Сервіс Shizuku буде зупинено.</string>
-    <string name="adb_pairing_tutorial_content_network">Shizuku потрібен доступ до локальної мережі. Це контролюється дозволом мережі.</string>
-    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Деякі системи (наприклад, MIUI) забороняють програмам доступ до мережі коли їх не видно, навіть якщо програма використовує фоновий сервіс за замовчуванням. Будь ласка, вимкніть оптимізацію батареї для Shizuku на таких системах.</string>
-    <string name="settings_start_on_boot_summary">Для рутованих пристроїв, Shizuku має можливість автоматично запускатися при завантаженні системи</string>
+    <string name="action_stop">Зупинити Shizuku™</string>
+    <string name="dialog_stop_message">Сервіс Shizuku™ буде зупинено.</string>
+    <string name="adb_pairing_tutorial_content_network">Shizuku™ потрібен доступ до локальної мережі. Це контролюється дозволом мережі.</string>
+    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Деякі системи (наприклад, MIUI) забороняють програмам доступ до мережі коли їх не видно, навіть якщо програма використовує фоновий сервіс за замовчуванням. Будь ласка, вимкніть оптимізацію батареї для Shizuku™ на таких системах.</string>
+    <string name="settings_start_on_boot_summary">Для рутованих пристроїв, Shizuku™ має можливість автоматично запускатися при завантаженні системи</string>
     <string name="home_wireless_adb_description_pre_11">До Android 11, потрібно під\'єднатися до комп\'ютеру щоб ввімкнути налагодження через Wi-FI.</string>
-    <string name="adb_pairing_tutorial_content_finish">Поверніться до Shizuku та запустіть Shizuku.</string>
-    <string name="home_root_description">В додаток, Shizuku можна автоматично запустити при завантаженні. Якщо цього не трапляється, будь ласка, перевірте чи ваша не обмежили Shizuku система чи сторонні інструменти.&lt;br&gt;Ви можете переглянути більше на %s.</string>
-    <string name="home_root_description_sui">Якщо ви користуєтесь Magisk, ви можете спробувати %1$s. Для користувачів root, він колись замінить Shizuku. Увага, існуючі програми мають трохи змінитися щоб можна було користуватися %2$s.</string>
-    <string name="dialog_legacy_not_support_title">%1$s не підтримує сучасну версію Shizuku</string>
-    <string name="dialog_requesting_legacy_title">%1$s просить стару версію Shizuku</string>
-    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; має підтримку нової версії Shizuku, але просить стару версію Shizuku. Це може трапитися тому, що Shizuku не запущено, будь ласка, перевірте у програмі Shizuku.&lt;p&gt;Підтримка старої версії Shizuku завершилася у березні 2019 року.</string>
+    <string name="adb_pairing_tutorial_content_finish">Поверніться до Shizuku™ та запустіть Shizuku™.</string>
+    <string name="home_root_description">В додаток, Shizuku™ можна автоматично запустити при завантаженні. Якщо цього не трапляється, будь ласка, перевірте чи ваша не обмежили Shizuku™ система чи сторонні інструменти.&lt;br&gt;Ви можете переглянути більше на %s.</string>
+    <string name="home_root_description_sui">Якщо ви користуєтесь Magisk, ви можете спробувати %1$s. Для користувачів root, він колись замінить Shizuku™. Увага, існуючі програми мають трохи змінитися щоб можна було користуватися %2$s.</string>
+    <string name="dialog_legacy_not_support_title">%1$s не підтримує сучасну версію Shizuku™</string>
+    <string name="dialog_requesting_legacy_title">%1$s просить стару версію Shizuku™</string>
+    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; має підтримку нової версії Shizuku™, але просить стару версію Shizuku™. Це може трапитися тому, що Shizuku™ не запущено, будь ласка, перевірте у програмі Shizuku™.&lt;p&gt;Підтримка старої версії Shizuku™ завершилася у березні 2019 року.</string>
     <string name="settings_use_system_color">Використовувати системний колір</string>
     <string name="notification_channel_adb_pairing">Парування для налагодження по Wi-Fi</string>
     <string name="notification_adb_pairing_input_paring_code">Уведіть код парування</string>
@@ -112,8 +112,8 @@
     <string name="notification_adb_pairing_service_found_title">Сервіс парування знайдено</string>
     <string name="notification_adb_pairing_stop_searching">Зупинити пошук</string>
     <string name="notification_adb_pairing_working_title">Виконується створення пари</string>
-    <string name="notification_adb_pairing_succeed_text">Тепер ви можете запустити сервіс Shizuku.</string>
-    <string name="permission_description">Дозволити програмі використовувати Shizuku.</string>
+    <string name="notification_adb_pairing_succeed_text">Тепер ви можете запустити сервіс Shizuku™.</string>
+    <string name="permission_description">Дозволити програмі використовувати Shizuku™.</string>
     <string name="adb_pairing_tutorial_content_left_is_clickable">Зверніть увагу, на ліву частину \"Налагодження по Wi-Fi\" можна натиснути, при натисканні відкриється нова сторіна. Лише вмикати перемикач справа неправильно.</string>
     <plurals name="home_app_management_authorized_apps_count">
         <item quantity="one">Авторизовано %d програму</item>
@@ -122,18 +122,18 @@
         <item quantity="other">Авторизовано %d програм</item>
     </plurals>
     <string name="terminal_tutorial_1">Спочатку, експортуйте файли де вам потрібно. Ви побачите два файли, %1$s та %2$s.</string>
-    <string name="terminal_tutorial_2_description">Наприклад, якщо ви хочете використати Shizuku в %1$s, вам потрібно замінити %2$s на %3$s (%4$s це назва пакету %1$s).</string>
+    <string name="terminal_tutorial_2_description">Наприклад, якщо ви хочете використати Shizuku™ в %1$s, вам потрібно замінити %2$s на %3$s (%4$s це назва пакету %1$s).</string>
     <string name="terminal_tutorial_3_description">Деякі поради: надайте %1$s дозвіл на виконання та додайте його в %2$s, ви зможете використовувати %1$s відразу.</string>
-    <string name="rish_description">З %1$s, в будь-якій програмі терміналу, ви зможете під\'\'єднатися та взаємодіяти з Shizuku. &lt;p&gt;Ви можете дізнатися більше про використання %1$s, натисніть тут щоб перегляньте документацію.</string>
+    <string name="rish_description">З %1$s, в будь-якій програмі терміналу, ви зможете під\'\'єднатися та взаємодіяти з Shizuku™. &lt;p&gt;Ви можете дізнатися більше про використання %1$s, натисніть тут щоб перегляньте документацію.</string>
     <string name="settings_translation_contributors">Співробітники перекладу</string>
     <string name="settings_start_on_boot">Запуск при завантаженні системи (root)</string>
-    <string name="dialog_legacy_not_support_message">Підтримка старої версії Shizuku завершилася у березні 2019 року. Також, стара версія Shizuku не працює на нових версіях Android.&lt;p&gt;Будь ласка, попросіть оновитися у розробника &lt;b&gt;%1$s&lt;/b&gt;.</string>
-    <string name="home_app_management_empty">Додатки, що запросили або декларували використання Shizuku будуть відображені тут.</string>
-    <string name="home_adb_is_limited_description">Виробник вашого пристрою обмежив права ADB, додатки що використовую Shizuku будуть працювати некорректно.
+    <string name="dialog_legacy_not_support_message">Підтримка старої версії Shizuku™ завершилася у березні 2019 року. Також, стара версія Shizuku™ не працює на нових версіях Android.&lt;p&gt;Будь ласка, попросіть оновитися у розробника &lt;b&gt;%1$s&lt;/b&gt;.</string>
+    <string name="home_app_management_empty">Додатки, що запросили або декларували використання Shizuku™ будуть відображені тут.</string>
+    <string name="home_adb_is_limited_description">Виробник вашого пристрою обмежив права ADB, додатки що використовую Shizuku™ будуть працювати некорректно.
 \n
 \nЗазвичай ці обмеження можна зняти змінивши налаштування в параметрах розробника. Будь ласка, прочитайте як це зробити в розділі \"Допомога\".
 \n
-\nМожливо потрібно буде перезапустити Shizuku.</string>
+\nМожливо потрібно буде перезапустити Shizuku™.</string>
     <string name="home_adb_is_limited_title">Потрібен ще один крок</string>
     <string name="dialog_adb_discovery_message_toggle_wireless_debugging">Будь ласка, спробуйте вимкнути та увімкнути \"Налагодження через Wi-Fi\", якщо пошук продовжується.</string>
 </resources>
