--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="permission_label">使用 Shizuku</string>
-    <string name="permission_description">允許應用程式使用 Shizuku。</string>
+    <string name="permission_label">使用 Shizuku™</string>
+    <string name="permission_description">允許應用程式使用 Shizuku™。</string>
     <string name="home_status_service_is_running">%1$s 正在執行</string>
     <string name="home_status_service_version">版本 %2$s，%1$s</string>
     <string name="home_status_service_version_update">版本 %2$s，%1$s&lt;br&gt;再次啟動來升級到版本 %3$s</string>
@@ -10,16 +10,16 @@
     <string name="home_root_button_restart">重新啟動</string>
     <string name="home_root_title">啟動 (針對已 Root 裝置)</string>
     <string name="home_adb_title">透過與電腦連線來啟動 (使用 ADB)</string>
-    <string name="home_adb_description">沒有 Root 的裝置需藉助 ADB 來啟動 Shizuku (須與電腦連線)。在裝置每次重新啟動後，這項作業皆須重新進行。請<b><a href="%1$s">閱讀說明</a></b>。</string>
-    <string name="home_root_description">另外，Shizuku 可以在開機時自動啟動。如果沒有啟動，請檢查 Shizuku 是否被您的系統或是第三方工具限制。&lt;br&gt;你可以參考 %s。</string>
+    <string name="home_adb_description">沒有 Root 的裝置需藉助 ADB 來啟動 Shizuku™ (須與電腦連線)。在裝置每次重新啟動後，這項作業皆須重新進行。請<b><a href="%1$s">閱讀說明</a></b>。</string>
+    <string name="home_root_description">另外，Shizuku™ 可以在開機時自動啟動。如果沒有啟動，請檢查 Shizuku™ 是否被您的系統或是第三方工具限制。&lt;br&gt;你可以參考 %s。</string>
     <string name="home_adb_dialog_view_command_copy_button">複製</string>
     <string name="home_adb_dialog_view_command_button_send">傳送</string>
     <string name="home_adb_button_view_command">檢視命令</string>
     <string name="home_adb_dialog_view_command_message">&lt;font face=monospace&gt;%1$s&lt;/font&gt;&lt;br&gt;&lt;br&gt;* 還有一些其他注意事項，請確認你已閱讀說明。</string>
-    <string name="dialog_legacy_not_support_title">%1$s 不支援現代 Shizuku</string>
-    <string name="dialog_legacy_not_support_message">舊式 Shizuku 已於 2019 年 3 月被棄用。此外，舊式 Shizuku 無法在較新版本的 Android 系統上工作。&lt;p&gt;請要求 &lt;b&gt;%1$s&lt;/b&gt; 的開發人員進行更新。</string>
-    <string name="dialog_requesting_legacy_title">%1$s 正在要求舊版 Shizuku</string>
-    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; 支援現代 Shizuku，但它正在要求舊版 Shizuku。這可能是因為 Shizuku 未在執行，請在 Shizuku 應用程式內檢查。&lt;p&gt;舊版 Shizuku 已於 2019 年 3 月被棄用。</string>
+    <string name="dialog_legacy_not_support_title">%1$s 不支援現代 Shizuku™</string>
+    <string name="dialog_legacy_not_support_message">舊式 Shizuku™ 已於 2019 年 3 月被棄用。此外，舊式 Shizuku™ 無法在較新版本的 Android 系統上工作。&lt;p&gt;請要求 &lt;b&gt;%1$s&lt;/b&gt; 的開發人員進行更新。</string>
+    <string name="dialog_requesting_legacy_title">%1$s 正在要求舊版 Shizuku™</string>
+    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; 支援現代 Shizuku™，但它正在要求舊版 Shizuku™。這可能是因為 Shizuku™ 未在執行，請在 Shizuku™ 應用程式內檢查。&lt;p&gt;舊版 Shizuku™ 已於 2019 年 3 月被棄用。</string>
     <string name="home_app_management_title">應用程式管理</string>
     <plurals name="home_app_management_authorized_apps_count">
         <item quantity="other">已授權 %d 個應用程式</item>
@@ -27,14 +27,14 @@
     <string name="home_app_management_view_authorized_apps">輕觸以管理已授權的應用程式</string>
     <string name="toast_copied_to_clipboard">%s
 \n已複製到剪貼簿。</string>
-    <string name="dialog_requesting_legacy_button_open_shizuku">開啟 Shizuku</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">開啟 Shizuku™</string>
     <string name="action_about">關於</string>
     <string name="about_view_source_code">在 %s 檢視原始碼</string>
     <string name="settings_title">設定</string>
     <string name="start_with_root_failed">未授予 Root 權限或是此裝置沒有 Root，因此無法啟動服務。</string>
     <string name="notification_channel_service_status">服務啟動狀態</string>
-    <string name="notification_service_starting">Shizuku 服務正在啟動…</string>
-    <string name="notification_service_start_failed">啟動 Shizuku 服務時失敗。</string>
+    <string name="notification_service_starting">Shizuku™ 服務正在啟動…</string>
+    <string name="notification_service_start_failed">啟動 Shizuku™ 服務時失敗。</string>
     <string name="notification_service_start_no_root">無法要求 Root 權限。</string>
     <string name="notification_working">正在處理…</string>
     <string name="settings_language">語言</string>
@@ -47,19 +47,19 @@
     <string name="home_adb_button_view_help">閱讀說明</string>
     <string name="dialog_cannot_open_browser_title">無法啟動瀏覽器</string>
     <string name="toast_copied_to_clipboard_with_text"><b>%s</b> 已複製到剪貼簿。</string>
-    <string name="home_learn_more_title">瞭解 Shizuku</string>
-    <string name="home_learn_more_description">瞭解如何使用 Shizuku 開發</string>
-    <string name="app_management_item_summary_requires_root">* 需要以 Root 執行的 Shizuku</string>
+    <string name="home_learn_more_title">瞭解 Shizuku™</string>
+    <string name="home_learn_more_description">瞭解如何使用 Shizuku™ 開發</string>
+    <string name="app_management_item_summary_requires_root">* 需要以 Root 執行的 Shizuku™</string>
     <string name="settings_translation_contributors">翻譯貢獻者</string>
     <string name="translation_contributors"/>
     <string name="settings_translation">參與翻譯</string>
     <string name="settings_translation_summary">協助我們將 %s 翻譯至您的語言</string>
-    <string name="dialog_stop_message">Shizuku 服務將被停止。</string>
+    <string name="dialog_stop_message">Shizuku™ 服務將被停止。</string>
     <string name="dialog_adb_port">通訊埠</string>
     <string name="dialog_adb_invalid_port">通訊埠是一個 1 至 65535 的整數。</string>
     <string name="dialog_adb_pairing_paring_code">配對碼</string>
     <string name="home_wireless_adb_title">透過無線偵錯啟動</string>
-    <string name="home_wireless_adb_description">在 Android 11 或更高版本上，您可以直接從您的裝置啟用無線偵錯並啟動 Shizuku，無須與電腦連線。&lt;p&gt;請先檢視分步驟指南。</string>
+    <string name="home_wireless_adb_description">在 Android 11 或更高版本上，您可以直接從您的裝置啟用無線偵錯並啟動 Shizuku™，無須與電腦連線。&lt;p&gt;請先檢視分步驟指南。</string>
     <string name="dialog_adb_pairing_title">與裝置配對</string>
     <string name="paring_code_is_wrong">配對碼錯誤。</string>
     <string name="cannot_connect_port">無法連線至無線偵錯服務。</string>
@@ -67,14 +67,14 @@
     <string name="adb_error_key_store">無法為無線偵錯產生金鑰。
 \n這可能是因為此裝置上的 KeyStore 機制已損壞。</string>
     <string name="adb_pair_required">請先進行配對步驟。</string>
-    <string name="action_stop">停止 Shizuku</string>
+    <string name="action_stop">停止 Shizuku™</string>
     <string name="adb_pairing">配對</string>
     <string name="starter">啟動器</string>
     <string name="dialog_adb_discovery">正在尋找無線偵錯服務</string>
     <string name="dialog_adb_pairing_discovery">正在尋找配對服務</string>
     <string name="dialog_adb_discovery_message">請在「開發人員選項」中啟用「無線偵錯」功能。在切換網路時，「無線偵錯」會自動停用。
 \n
-\n注意：請不要停用「開發人員選項」或「USB 偵錯」，否則 Shizuku 會被停止。</string>
+\n注意：請不要停用「開發人員選項」或「USB 偵錯」，否則 Shizuku™ 會被停止。</string>
     <string name="dialog_adb_discovery_message_toggle_wireless_debugging">如果一直搜尋，請嘗試停用並啟用「無線偵錯」。</string>
     <string name="dialog_wireless_adb_not_enabled">無線偵錯未啟用。
 \n請注意，在 Android 11 之前，要啟用無線偵錯必須先與電腦連線。</string>
@@ -83,25 +83,25 @@
 \n配對過程開始後，您將能夠輸入配對碼。</string>
     <string name="adb_pairing_requires_multi_window_reason">系統要求配對對話方塊始終可見，使用「分割畫面」模式是使此應用程式和系統對話方塊同時可見的唯一方法。</string>
     <string name="development_settings">開發人員選項</string>
-    <string name="home_root_description_sui">如果您正在使用 Magisk，可以嘗試 %1$s。對於 Root 使用者，它將最終取代 Shizuku。注意，已有的應用程式需要一點點修改來使用 %2$s。</string>
-    <string name="settings_start_on_boot_summary">對於已 Root 裝置，Shizuku 可以在開機時自動啟動</string>
+    <string name="home_root_description_sui">如果您正在使用 Magisk，可以嘗試 %1$s。對於 Root 使用者，它將最終取代 Shizuku™。注意，已有的應用程式需要一點點修改來使用 %2$s。</string>
+    <string name="settings_start_on_boot_summary">對於已 Root 裝置，Shizuku™ 可以在開機時自動啟動</string>
     <string name="settings_start_on_boot">在開機時啟動 (Root)</string>
     <string name="grant_dialog_button_allow_always">一律允許</string>
     <string name="grant_dialog_button_deny">拒絕</string>
     <string name="permission_warning_template">要允許「%1$s」%2$s 嗎？</string>
-    <string name="home_terminal_title">在終端機應用程式中使用 Shizuku</string>
-    <string name="home_terminal_description">在您喜愛的終端機應用程式中透過 Shizuku 執行命令</string>
+    <string name="home_terminal_title">在終端機應用程式中使用 Shizuku™</string>
+    <string name="home_terminal_description">在您喜愛的終端機應用程式中透過 Shizuku™ 執行命令</string>
     <string name="terminal_tutorial_1">首先，將檔案匯出到任何您想要的位置。您將找到兩個檔案，%1$s 和 %2$s。</string>
     <string name="terminal_tutorial_1_description">若選擇的資料夾中已有同名檔案，它們會被刪除。
 \n
-\n匯出功能使用 SAF (Storage Access Framework)。有報告稱 MIUI 破壞了 SAF 的功能，如果您使用 MIUI，您可能需要從 Shizuku 的 apk 中提取檔案，或是從 GitHub 下載檔案。</string>
+\n匯出功能使用 SAF (Storage Access Framework)。有報告稱 MIUI 破壞了 SAF 的功能，如果您使用 MIUI，您可能需要從 Shizuku™ 的 apk 中提取檔案，或是從 GitHub 下載檔案。</string>
     <string name="terminal_export_files">匯出檔案</string>
     <string name="terminal_tutorial_2">然後，使用任意文字編輯器開啟並編輯 %1$s。</string>
-    <string name="terminal_tutorial_2_description">例如，如果要在 %1$s 中使用 Shizuku，則應將 %2$s 取代為 %3$s (%4$s 是 %1$s 的套件名稱)。</string>
-    <string name="terminal_tutorial_3">最後，將檔案移至終端機應用程式可以存取的位置，您便可使用 %1$s 來透過 Shizuku 執行命令。</string>
+    <string name="terminal_tutorial_2_description">例如，如果要在 %1$s 中使用 Shizuku™，則應將 %2$s 取代為 %3$s (%4$s 是 %1$s 的套件名稱)。</string>
+    <string name="terminal_tutorial_3">最後，將檔案移至終端機應用程式可以存取的位置，您便可使用 %1$s 來透過 Shizuku™ 執行命令。</string>
     <string name="terminal_tutorial_3_description">一些技巧：將執行權限授予 %1$s 並將其新增到 %2$s，您就能直接使用 %1$s。</string>
-    <string name="rish_description">透過 %1$s，您可以在任何終端機應用程式中連線到由 Shizuku 執行的 shell 並與之互動。 &lt;p&gt;有關 %1$s 的具體使用方式，請輕觸以檢視文件。</string>
-    <string name="adb_pairing_tutorial_title">將 Shizuku 與您的裝置配對</string>
+    <string name="rish_description">透過 %1$s，您可以在任何終端機應用程式中連線到由 Shizuku™ 執行的 shell 並與之互動。 &lt;p&gt;有關 %1$s 的具體使用方式，請輕觸以檢視文件。</string>
+    <string name="adb_pairing_tutorial_title">將 Shizuku™ 與您的裝置配對</string>
     <string name="adb_pairing_tutorial_content_steps">進入「開發人員選項」-「無線偵錯」。輕觸「使用配對碼配對裝置」，您將看到一個六位數字代碼。</string>
     <string name="adb_pairing_tutorial_content_enter_pairing_code">在通知中輸入代碼來完成配對。</string>
     <string name="notification_channel_adb_pairing">無線偵錯配對</string>
@@ -111,26 +111,26 @@
     <string name="notification_adb_pairing_stop_searching">停止尋找</string>
     <string name="notification_adb_pairing_working_title">正在進行配對</string>
     <string name="notification_adb_pairing_succeed_title">配對成功</string>
-    <string name="notification_adb_pairing_succeed_text">您現在可以啟動 Shizuku 服務了。</string>
+    <string name="notification_adb_pairing_succeed_text">您現在可以啟動 Shizuku™ 服務了。</string>
     <string name="notification_adb_pairing_failed_title">配對失敗</string>
     <string name="notification_adb_pairing_retry">重試</string>
-    <string name="adb_pairing_tutorial_content_notification_blocked">配對過程需要您與 Shizuku 的通知互動。請允許 Shizuku 發布通知。</string>
+    <string name="adb_pairing_tutorial_content_notification_blocked">配對過程需要您與 Shizuku™ 的通知互動。請允許 Shizuku™ 發布通知。</string>
     <string name="notification_settings">通知設定</string>
     <string name="adb_pairing_tutorial_content_miui">MIUI 使用者可能需要在系統設定中從「通知管理」-「通知顯示設定」將通知樣式切換為「原生樣式」。</string>
     <string name="adb_pairing_tutorial_content_miui_2">否則，您可能會無法從通知輸入配對碼。</string>
-    <string name="adb_pairing_tutorial_content_notification">一則來自 Shizuku 的通知將協助您完成配對。</string>
+    <string name="adb_pairing_tutorial_content_notification">一則來自 Shizuku™ 的通知將協助您完成配對。</string>
     <string name="adb_pairing_tutorial_content_left_is_clickable">請注意，「無線偵錯」選項的左側是可點選的，輕觸它將開啟一個新的頁面。僅開啟右側的開關是錯誤的。</string>
     <string name="home_wireless_adb_description_pre_11">在 Android 11 之前，必須與電腦連線才能啟用無線偵錯。</string>
     <string name="home_wireless_adb_view_guide_button">分步驟指南</string>
-    <string name="adb_pairing_tutorial_content_network">Shizuku 需要存取本機網路。它由網路權限控制。</string>
-    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">某些系統 (例如 MIUI) 不允許應用程式在不可見時存取網路，即使應用程式已按標準使用前景服務。請在此類系統上為 Shizuku 停用電池效能最佳化功能。</string>
+    <string name="adb_pairing_tutorial_content_network">Shizuku™ 需要存取本機網路。它由網路權限控制。</string>
+    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">某些系統 (例如 MIUI) 不允許應用程式在不可見時存取網路，即使應用程式已按標準使用前景服務。請在此類系統上為 Shizuku™ 停用電池效能最佳化功能。</string>
     <string name="settings_use_system_color">使用系統主題色彩</string>
-    <string name="adb_pairing_tutorial_content_finish">回到 Shizuku 並啟動 Shizuku。</string>
-    <string name="home_app_management_empty">已要求或宣告 Shizuku 的應用程式將顯示在此處。</string>
+    <string name="adb_pairing_tutorial_content_finish">回到 Shizuku™ 並啟動 Shizuku™。</string>
+    <string name="home_app_management_empty">已要求或宣告 Shizuku™ 的應用程式將顯示在此處。</string>
     <string name="home_adb_is_limited_title">您需要進行額外的步驟</string>
-    <string name="home_adb_is_limited_description">您的裝置製造商限制了 ADB 的權限，使用 Shizuku 的應用程式無法正常運作。
+    <string name="home_adb_is_limited_description">您的裝置製造商限制了 ADB 的權限，使用 Shizuku™ 的應用程式無法正常運作。
 \n
 \n通常，在「開發人員選項」中調整一些選項即可解除此限制。請閱讀說明來瞭解具體的作業方式。
 \n
-\n您可能需要重新啟動 Shizuku 以使作業生效。</string>
+\n您可能需要重新啟動 Shizuku™ 以使作業生效。</string>
 </resources>
